--- a/C/03_배열과포인터.md
+++ b/C/03_배열과포인터.md
@@ -334,3 +334,54 @@
 ## 14. 포인터와 함수에 대한 이해
 ### 14.1 함수의 인자로 배열 전달하기
 #### 14.1.1 인자전달의 기본방식은 값의 복사이다!
+- 함수호출 시 전달되는 인자의 값은 매개변수에 복사가 된다.
+  ```
+    int SimpleFunc(int num) {...}
+    int main(void) {
+      int age = 17;
+      SimpleFunc(age);    // age에 저장된 값이 매개변수 num에 복사된다.
+    }
+  ```
+  + 여기서 실제로 전달되는 것은 age가 아니라, age에 저장된 값이다!
+  + 그러므로, SimpleFunc 함수 내에서 num값이 증가되더라도 age의 값은 변하지 않는다.
+- 그렇다면, 함수호출 시 인자로 배열을 통째로 전달할 수는 없을까?
+  + 없다. 함수를 호출하면서 매개변수에 배열을 통째로 넘겨주는 방법은 존재하지 않는다.
+  + 왜? **배열을 통째로 넘겨받으려면 매개변수로 배열을 선언할 수 있어야 하기 때문이다.** => 불가능
+  + 대신에 함수 내에서 배열에 접근할 수 있도록 배열의 주소 값을 전달하는 것은 가능하다.
+
+#### 14.1.2 배열을 함수의 인자로 전달하는 방식
+- 아파트를 보고 싶어 하는 사람 앞에 아파트를 통째로 복사해다 놓을 수 없다면, 아파트의 주소를 가르쳐줘서 직접 찾아가게 하면 된다.
+- 이처럼 배열을 통째로 전달하는 것이 불가능하다면, 배열의 주소 값을 인자로 전달해서 이를 통해 접근하도록 유도하는 방법
+  ```
+    int arr[3] = {1, 2, 3};
+    SimpleFunc(arr);    // SimpleFunc 함수를 호출하면서 배열 arr의 주소 값 전달
+  ```
+  + SimpleFunc 함수의 매개변수 선언 => `void SimpleFunc(int* param) {...}`
+  + 이렇게 전달된 param을 이용해서 배열의 형태로 접근하기
+    `printf("%d %d", param[1], param[2]);`
+  + **주소 값만 알면 해당 메모리 공간에 접근이 가능하므로** 값의 출력 뿐만 아니라, 값의 변경 또한 가능하다.
+- **배열의 주소 값만 안다면 어디서든 배열에 접근하여 저장된 값을 참조하고 변경할 수 있다.**
+
+#### 14.1.3 배열을 함수의 인자로 전달받는 함수의 또 다른 선언
+```
+  void ShowArayElem(int* param, int len) {...}
+
+  void ShowArayElem(int param[], int len) {...}
+```
+- `int* param`과 `int param[]`은 완전히 동일한 선언이다.
+- `int param[]`과 같은 형태가 배열이 인자로 전달된다는 느낌을 강하게 주기 때문에, 배열의 주소 값이 전달될 때 많이 사용된다.
+- 그러나, 위의 두 선언이 동일하게 간주되는 경우는 **매개변수의 선언으로 제한** 된다.
+  `int* ptr = arr;    // int ptr[] = arr;로 대체 불가능`
+- 함수 내에서는 인자로 전달된 배열의 길이 계산 불가
+  ```
+    void SimpleAryFunc1(int* arr) {
+      int sz = sizeof(arr);   // 변수 sz에는 포인터 변수 arr의 크기가 저장
+      ...
+    }
+
+    void SimpleAryFunc2(int arr[]) {
+      int sz = sizeof(arr);   // 변수 sz에는 포인터 변수 arr의 크기가 저장
+    }
+  ```
+  + 배열의 주소 값을 인자로 전달받는 매개변수는 포인터 변수이기 때문에 배열의 크기가 반환되지 않고 포인터 변수의 크기가 반환된다.
+  + 그러므로, 함수 내에서는 배열의 길이를 계산할 수 없으므로 배열의 크기나 길이정보도 함께 인자로 전달해야 한다.
