--- a/C/03_배열과포인터.md
+++ b/C/03_배열과포인터.md
@@ -295,7 +295,7 @@
     - 즉, 문자열 저장 이후 `char* str = 0x1234;` 다음과 같은 형태가 되므로 문자열의 주소 값이 str에 저장되는 것이다.
   + `printf("Show your string");`
     - 이와 같은 경우에도 큰따옴표로 묶여서 표현되는 문자열은 그 형태에 상관없이 메모리 공간에 저장된 후 그 주소값이 반환된다.
-    - `printf(0x1234);` => 이렇듯 printf 함수는 문자열을 통째로 전달받는 함수가 아닌, 문자열의 주소 값을 전달받는 함수이다.
+    - `printf(0x1234);` => printf 함수는 문자열을 통째로 전달받는 함수가 아닌, 문자열의 주소 값을 전달받는 함수이다.
     - ex.
       ```
         WhoAreYou("Hong");  // WhoAreYou라는 함수호출 (실제 전달 값은 문자 H의 주소값이므로 반환형은 void라 가정)
@@ -371,7 +371,7 @@
 - `int* param`과 `int param[]`은 완전히 동일한 선언이다.
 - `int param[]`과 같은 형태가 배열이 인자로 전달된다는 느낌을 강하게 주기 때문에, 배열의 주소 값이 전달될 때 많이 사용된다.
 - 그러나, 위의 두 선언이 동일하게 간주되는 경우는 **매개변수의 선언으로 제한** 된다.
-  `int* ptr = arr;    // int ptr[] = arr;로 대체 불가능`
+  + `int* ptr = arr;    // int ptr[] = arr;로 대체 불가능`
 - 함수 내에서는 인자로 전달된 배열의 길이 계산 불가
   ```
     void SimpleAryFunc1(int* arr) {
@@ -383,5 +383,91 @@
       int sz = sizeof(arr);   // 변수 sz에는 포인터 변수 arr의 크기가 저장
     }
   ```
-  + 배열의 주소 값을 인자로 전달받는 매개변수는 포인터 변수이기 때문에 배열의 크기가 반환되지 않고 포인터 변수의 크기가 반환된다.
+  + 배열의 주소 값을 인자로 전달받는 매개변수는 포인터 변수이므로 배열의 크기가 반환되지 않고 포인터 변수의 크기가 반환된다.
   + 그러므로, 함수 내에서는 배열의 길이를 계산할 수 없으므로 배열의 크기나 길이정보도 함께 인자로 전달해야 한다.
+
+### 14.2 Call-by-value vs Call-by-reference
+- 함수를 호출할 때 단순히 값을 전달하는 형태의 함수호출을 Call-by-value,
+- 메모리의 접근에 사용되는 주소 값을 전달하는 형태의 함수호출을 Call-by-reference라 한다.
+- 즉, Call-by-value와 Call-by-reference를 구분하는 기준은 함수의 인자로 전달되는 대상에 있다.
+#### 14.2.1 값을 전달하는 형태의 함수호출: Call-by-value
+  ```
+    void SwapChange(int n1, int n2) {...}
+
+    int main(void) {
+      int num1 = 10, num2 = 20;
+      SwapChange(num1, num2);       // SwapChange 함수 호출을 통해 두 값이 서로 바뀌길 기대
+      printf("num1 num2: %d %d\n", num1, num2);   // 바뀌지 않고 그대로 10 20 출력됨
+    }
+  ```
+  + SwapChange 함수 호출을 통해 num1과 num2의 값이 뒤바뀌길 기대하지만, 실제 num1과 num2의 값은 그대로임
+#### 14.2.2 주소 값을 전달하는 형태의 함수호출: Call-by-reference
+- 위의 예제에서 SwapChange 함수 내에서 num1과 num2에 직접 접근이 가능하도록 하면 두 값을 바꿀 수 있다.
+  ```
+    void SwapChange(int* ptr1, int* ptr2) {
+      int temp = *ptr1;
+      *ptr1 = *ptr2;
+      *ptr2 = temp;
+    }
+
+    int main(void) {
+      SwapChange(&num1, &num2);
+    }
+  ```
+#### 이제는 scanf 함수호출 시 & 연산자를 붙이는 이유를 알 수 있다.
+  ```
+    int main(void) {
+      int num;
+      scanf("%d", &num);      // 변수 num의 주소 값을 scanf 함수에 전달
+    }
+  ```
+  + 위의 scanf 함수호출이 완료되면 변수 num에는 값이 채워진다.
+  + 즉, 사용자로부터 값을 입력받아서 num에 그 값을 채우는 일은 scanf가 담당하므로 scanf 함수는 num의 주소 값을 알아야 한다.
+  + 그래야 num에 접근을 해서 값을 채워 넣을 수 있기 때문이다.
+- 즉, scanf 함수의 호출도 Call-by-reference 형태의 함수호출에 해당한다.
+- 그렇다면 문자열을 입력 받을 때에는 왜 & 연산자를 붙이지 않는 것일까?
+  ```
+    char str[30];
+    scanf("%s", str);     // scanf("%s", &str)은 틀린 표현
+  ```
+### 14.3 포인터 대상의 const 선언
+#### 14.3.1 포인터 변수가 참조하는 대상의 변경을 허용하지 않는 const 선언
+```
+  int num = 20;
+  const int* ptr = &num;
+  *ptr = 30;    // 컴파일 에러!
+  num = 40;     // 컴파일 성공!
+```
+- const가 붙으면 포인터 변수 ptr을 이용해서 ptr이 가리키는 변수에 저장된 값을 변경하는 것을 허용하지 않겠다는 뜻
+- const를 사용한다고 해서 포인터 변수 ptr이 가리키는 변수 num이 상수화되는 것은 아니다. `num = 40;`은 허용됨
+- 값을 변경하는 방법에 제한을 두는 것일 뿐, 상수로 만드는 선언은 아니다.
+#### 14.3.2 포인터 변수의 상수화
+- const 선언은 포인터 변수의 이름 앞에 올 수도 있다.
+- `int* const ptr = &num;`
+- 이렇게 되면, 포인터 변수 ptr은 상수가 되며 한번 주소 값이 저장되면 그 값의 변경이 불가능하다.
+  ```
+    int num1 = 20, num2 = 30;
+    int* const ptr = &num1;
+    ptr = &num2;      // 컴파일 에러!
+    *ptr = 40;        // 컴파일 성공!
+  ```
+  + ptr만 상수일 뿐, ptr이 가리키는 대상에 저장된 값을 변경하는 연산은 문제가 되지 않는다.
+- 두 가지 형태의 const 동시 선언
+  + `const int* const ptr = &num;`
+    ```
+      *ptr = 20;
+      ptr = &age;         // 둘 다 컴파일 에러!
+    ```
+#### 14.3.3 const 선언이 갖는 의미
+- const는 원래 C++에만 존재하던 키워드였는데 C언어의 표준 재정립 과정에서 추가됨
+- const 선언을 많이 하면 프로그램 코드의 안정성이 높아진다.
+  ```
+    double PI = 3.1415;
+    PI = 3.07;          // 실수로 삽입된 문장, 컴파일 시 발견 안됨
+
+    ...
+
+    const double PI = 3.1415;
+    PI = 3.07;          // 컴파일 시 발견되는 오류상황
+  ```
+  사소해 보일 수 있으나, 컴파일러가 이러한 문제점을 발견하지 못할 경우 오류를 찾기 쉽지 않다. 
