--- a/C/03_배열과포인터.md
+++ b/C/03_배열과포인터.md
@@ -189,7 +189,7 @@
 #### 13.1.2 1차원 배열이름의 포인터 형과 배열이름을 대상으로 하는 * 연산
 - `int arr1[5];`
   + 여기서 배열의 이름 arr1이 가리키는 것은 배열의 첫 번째 요소이다.
-  + 그런데 배열의 첫 번째 요소가 int형 변수이니 => arr1은 **int형 포인터(int *)** 라는 것을 알 수 있다.
+  + 그런데 배열의 첫 번째 요소가 int형 변수이니 => arr1은 **int형 포인터(int \*)** 라는 것을 알 수 있다.
 - 즉, 1차원 배열이름의 포인터 형은 배열의 이름이 가리키는 대상을 기준으로 결정하면 된다!
   ```
     int arr1[3] = {1, 2, 3};
@@ -470,4 +470,4 @@
     const double PI = 3.1415;
     PI = 3.07;          // 컴파일 시 발견되는 오류상황
   ```
-  사소해 보일 수 있으나, 컴파일러가 이러한 문제점을 발견하지 못할 경우 오류를 찾기 쉽지 않다. 
+  사소해 보일 수 있으나, 컴파일러가 이러한 문제점을 발견하지 못할 경우 오류를 찾기 쉽지 않다.
