--- a/C/03_배열과포인터.md
+++ b/C/03_배열과포인터.md
@@ -111,7 +111,7 @@
   `int * pnum = &num;`
 
 #### 12.2.1 포인터가 가리키는 메모리를 참조하는 * 연산자
-- * 연산자는 포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자이다.
+- \* 연산자는 포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자이다.
   ```
     int num = 10;
     int* pnum = &num;
