--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -265,7 +265,7 @@
 - 함수의 호출이 완료되면 포인터 변수 maxPtr에는 가장 큰 값이 저장된 배열요소의 주소 값이,
 - minPtr에는 가장 작은 값이 저장된 배열요소의 주소 값이 저장되어야 한다.
 
-  ```
+  ```c
     #include <stdio.h>
 
     void MaxAndMin(int* arr, int size, int** mxPtr, int** mnPtr) {
@@ -283,8 +283,8 @@
         }
       }
 
-      *mxPtr = max;
-      *mnPtr = min;      
+      \*mxPtr = max;
+      \*mnPtr = min;
     }
 
     int main(void) {
@@ -299,7 +299,90 @@
       }
 
       MaxAndMin(arr, sizeof(arr)/sizeof(int), &maxPtr, &minPtr);
-      printf("최대: %d, 최소: %d \n", *maxPtr, *minPtr);
+      printf("최대: %d, 최소: %d \n", \*maxPtr, \*minPtr);
       return 0;
     }
   ```
+
+## 18. 다차원 배열과 포인터의 관계
+### 18.1 2차원 배열이름의 포인터 형
+#### 18.1.1 1차원 배열이름의 포인터 형과 2차원 배열이름의 포인터 형
+- `int arr[10];` => 여기서 arr은 int형 포인터.
+  + `SimpleFunc(arr);` 함수의 인자로 전달 되려면
+  + `void SimpleFunc(int * ptr) {...}` 이런식으로 선언되어야 한다.
+  + 아? 그럼 int형 2차원 배열의 이름을 인자로 전달하려면, 매개변수로 int형 더블 포인터 변수가 선언되어야겠네? => 잘못된 생각
+- `int* parr[20];` => 이미 이러한 포인터 배열의 이름 parr이 int**형 포인터임을 학습하였다.
+- **2차원 배열의 이름이 더블 포인터 형이라는 오해를 절대로 해서는 안 된다!!!!!!**
+- 2차원 배열이름의 포인터 형을 결정짓는 방식은 1차원과 다르며 좀 더 복잡하다.
+#### 18.1.2 2차원 배열이름이 가리키는 것들은?
+- `int arr2d[3][3];` 이와 같이 선언된 2차원 배열이 있다고 가정했을 때,
+  + 배열이름 arr2d는 인덱스 기준으로 `arr2d[0][0]` 첫번째 요소를 가리킨다.
+  + 2차원 배열의 경우 `arr2d[0]`, `arr2d[1]`, `arr2d[2]`는 각각 1행,2행,3행의 첫 번째 요소를 가리키므로
+  + 2차원 배열의 첫 번째 요소의 주소 값 출력을 위해서는 ...
+    ```c
+      printf("%p", arr2d);
+      printf("%p", arr2d[0]);   // 두 문장의 출력 결과는 동일함
+    ```
+  + 그럼 arr2d와 arr2d[0]는 같은 것인가?
+    - arr2d는 첫 번째 요소를 가리키면서 배열 전체를 의미한다. 하지만, arr2d[0]는 첫 번째 요소를 가리키되 1행만을 의미한다. 즉, arr2d와 arr2d[0]는 같지 않다.
+#### 18.1.3 배열이름 기반의 포인터 연산: 배열이름에 1을 더한 결과는?
+- **2차원 배열이름을 대상으로 증가 및 감소연산을 할 경우, 연산결과는 각 행의 첫 번째 요소의 주소 값이 된다.**
+  ```c
+    int arr1[3][2];
+    int arr2[2][3];
+
+    printf("arr1: %p \n", arr1);          // 004BFBE0
+    printf("arr1+1: %p \n", arr1+1);      // 004BFBE0
+    printf("arr1+2: %p \n\n", arr1+2);    // 004BFBF0    // 8씩 증가
+
+    printf("arr2: %p \n", arr2);          // 004BFBC0
+    printf("arr2+1: %p \n", arr2+1);      // 004BFBCC    // 12 증가
+  ```
+  + 따라서 2차원 배열을 이루는 요소의 자료형이 동일하더라도 배열의 가로길이가 다르면, 배열이름을 대상으로 하는 포인터 연산의 결과가 달라진다.
+  + 배열이름 arr1과 arr2는 둘 다 int형 2차원 배열인데도 가로길이가 다르므로 **포인터 형이 같지 않다!**
+- **2차원 배열이름의 포인터 형은 가로의 길이에 따라서도 달라진다!**
+#### 18.1.4 최종결론! 2차원 배열이름의 포인터 형
+- 2차원 배열이름의 포인터 형에는 다음 두 가지 정보가 함께 담겨야 한다.
+  1. 가리키는 대상은 무엇인가?
+  2. 배열이름(포인터)을 대상으로 값을 1 증가 및 감소 시 실제로는 얼마가 증가 및 감소하는가?
+    ```c
+      int arr[3][4];
+    ```
+    **배열이름 arr이 가리키는 대상은 int형 변수이고, 포인터 연산 시 sizeof(int)*4의 크기단위로 값이 증가 및 감소**
+- 가리키는 대상이 int형 변수이면서 포인터 연산 시 sizeof(int)\*4의 크기단위로 증가 및 감소하는 포인터 변수 ptr 선언
+  + `int (*ptr) [4];` => 배열선언인지 포인터 변수의 선언인지 헷갈릴 수 있으나, 이것은 **포인터 변수의 선언** 이다.
+  + int는 가리키는 대상의 자료형, [4]는 한번에 건너뛸 변수의 개수를 의미한다.
+  + 위와 같은 포인터 변수는 **2차원 배열을 가리키는 용도로만 사용됨** ===> **배열 포인터 변수**
+#### 18.1.5 2차원 배열의 포인터 형을 결정짓는 연습하기
+```c
+  char (\*arr1)[4];   
+  // char형 변수를 가리키면서, 포인터 연산시 sizeof(char)*4의 크기단위로 증감하는 포인터 변수
+
+  double (\*arr2)[7];
+  // double형 변수를 가리키면서, 포인터 연산시 sizeof(double)*7의 크기단위로 증감하는 포인터 변수
+```
+- 예제 연습
+  ```c
+    int arr1[2][2] = {
+      {1, 2}, {3, 4}
+    };
+    int arr2[3][2] = {
+      {1, 2}, {3, 4}, {5, 6}
+    };
+
+    int (\*ptr)[2];
+    int i;
+
+    ptr = arr1;
+    printf("Show 2,2 arr1 \n");
+    for (i = 0; i < 2; i++) {
+      printf("%d %d \n", ptr[i][0], ptr[i][1]);       
+    }
+
+    ptr = arr2;
+    printf("Show 3,2 arr2 \n");
+    for (i = 0; i < 2; i++) {
+      printf("%d %d \n", ptr[i][0], ptr[i][1]);
+    }
+  ```
+  모두 2차원 배열이면서 가로의 길이가 동일하므로, 이들 배열이름의 포인터 형은 모두 동일하다.
