--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -265,7 +265,7 @@
 - 함수의 호출이 완료되면 포인터 변수 maxPtr에는 가장 큰 값이 저장된 배열요소의 주소 값이,
 - minPtr에는 가장 작은 값이 저장된 배열요소의 주소 값이 저장되어야 한다.
 
-  ```c
+  ```javascript
     #include <stdio.h>
 
     void MaxAndMin(int* arr, int size, int** mxPtr, int** mnPtr) {
@@ -283,8 +283,8 @@
         }
       }
 
-      \*mxPtr = max;
-      \*mnPtr = min;
+      *mxPtr = max;
+      *mnPtr = min;
     }
 
     int main(void) {
@@ -299,7 +299,7 @@
       }
 
       MaxAndMin(arr, sizeof(arr)/sizeof(int), &maxPtr, &minPtr);
-      printf("최대: %d, 최소: %d \n", \*maxPtr, \*minPtr);
+      printf("최대: %d, 최소: %d \n", *maxPtr, *minPtr);
       return 0;
     }
   ```
@@ -354,15 +354,15 @@
   + int는 가리키는 대상의 자료형, [4]는 한번에 건너뛸 변수의 개수를 의미한다.
   + 위와 같은 포인터 변수는 **2차원 배열을 가리키는 용도로만 사용됨** ===> **배열 포인터 변수**
 #### 18.1.5 2차원 배열의 포인터 형을 결정짓는 연습하기
-```c
-  char (\*arr1)[4];   
+```javascript
+  char (*arr1)[4];   
   // char형 변수를 가리키면서, 포인터 연산시 sizeof(char)*4의 크기단위로 증감하는 포인터 변수
 
-  double (\*arr2)[7];
+  double (*arr2)[7];
   // double형 변수를 가리키면서, 포인터 연산시 sizeof(double)*7의 크기단위로 증감하는 포인터 변수
 ```
 - 예제 연습
-  ```c
+  ```javascript
     int arr1[2][2] = {
       {1, 2}, {3, 4}
     };
@@ -370,7 +370,7 @@
       {1, 2}, {3, 4}, {5, 6}
     };
 
-    int (\*ptr)[2];
+    int (*ptr)[2];
     int i;
 
     ptr = arr1;
