--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -348,7 +348,7 @@
     ```c
       int arr[3][4];
     ```
-    + **배열이름 arr이 가리키는 대상은 int형 변수이고, 포인터 연산 시 sizeof(int)*4의 크기단위로 값이 증가 및 감소**
+    + **배열이름 arr이 가리키는 대상은 int형 변수이고, 포인터 연산 시 sizeof(int)\*4의 크기단위로 값이 증가 및 감소**
 - 가리키는 대상이 int형 변수이면서 포인터 연산 시 sizeof(int)\*4의 크기단위로 증가 및 감소하는 포인터 변수 ptr 선언
   + `int (*ptr) [4];` => 배열선언인지 포인터 변수의 선언인지 헷갈릴 수 있으나, 이것은 **포인터 변수의 선언** 이다.
   + int는 가리키는 대상의 자료형, [4]는 한번에 건너뛸 변수의 개수를 의미한다.
