--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -386,3 +386,10 @@
     }
   ```
   모두 2차원 배열이면서 가로의 길이가 동일하므로, 이들 배열이름의 포인터 형은 모두 동일하다.
+
+### 18.2 2차원 배열이름의 특성과 주의사항
+#### 18.2.1 '배열 포인터'와 '포인터 배열'을 혼동하지 말자!
+```
+  int * whoA[4];    // 포인터 배열
+  int (*whoA)[4];   // 배열 포인터
+```
