--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -390,6 +390,75 @@
 ### 18.2 2차원 배열이름의 특성과 주의사항
 #### 18.2.1 '배열 포인터'와 '포인터 배열'을 혼동하지 말자!
 ```
-  int * whoA[4];    // 포인터 배열
-  int (*whoA)[4];   // 배열 포인터
+  int * whoA[4];    // 포인터 배열   // int형 포인터 변수로 이루어진 int형 포인터 배열
+  int (*whoA)[4];   // 배열 포인터   // 가로길이가 4인 int형 2차원 배열을 가리키는 용도의 포인터 변수
 ```
+```javascript
+  int num1 = 10, num2 = 20, num3 = 30, num4 = 40;
+  int arr2d[2][4] = {1, 2, 3, 4, 5, 6, 7, 8};
+  int i, j;
+
+  int * whoA[4] = {&num1, &num2, &num3, &num4};     // 포인터 배열
+  int (*whoA)[4] = arr2d;                           // 배열 포인터
+
+  printf("%d %d %d %d \n", *whoA[0], *whoA[1], *whoA[2], *whoA[3]);
+  for (i = 0; i < 2; i++) {
+    for (j = 0; j < 4; j++) {
+      printf("%d ", whoB[i][j]);
+    }
+    printf("\n");
+  }
+```
+#### 18.2.2 2차원 배열을 함수의 인자로 전달하기
+- 2차원 배열의 포인터 형을 결정할 수 있게 되었으니, 2차원 배열의 주소 값을 인자로 전달받는 함수를 정의할 수 있다.
+  ```c
+    int main(void) {
+      int arr1[2][7];
+      double arr2[4][5];
+      SimpleFunc(arr1, arr2);
+    }
+  ```
+  + 위 main 함수에서 호출되고 있는 SimpleFunc 함수의 원형을 선언해보자.
+    ```javascript
+      int (*parr1)[7];
+      int (*parr2)[5];
+    ```
+  + 따라서, 반환형이 void라고 가정했을 때,
+    ```javascript
+      void SimpleFunc(int (*parr1)[7], double (*parr2)[5]) {...}
+      void SimpleFunc(int parr1[][7], double parr2[][5]) {...}
+    ```
+    이 둘은 매개변수의 선언에서만 같은 의미를 지닌다.
+#### 18.2.3 2차원 배열에서도 arr[i]와 \*(arr+i)는 같다.
+```
+  int arr[3][2] = {{1, 2}, {3, 4}, {5, 6}};
+```
+- 6이 저장된 인덱스 `arr[2][1]`의 값을 변경하는 방법
+  ```javascript
+    arr[2][1] = 4;
+    (*(arr+2))[1] = 4;    
+    *(arr[2]+1) = 4;    // arr[2]를 A로 치환해보면 쉽게 알 수 있음
+    *(*(arr+2)+1) = 4;
+  ```
+  `arr[2][1]`에서 arr[2]를 A로 치환하면 => A[1] => \*(A+1) => \*(arr[2]+1)
+
+#### 문제풀이
+##### 1.
+```c
+  int main (void) {
+    int * arr1[5];
+    int * arr2[3][5];
+
+    ??? = arr1;
+    ??? = arr2;
+  }
+```
+- 여기서 ???를 대신할 수 있는 포인터 변수를 선언해라
+  + `int * arr1[5];` => arr1은 int형 포인터 변수로 이루어진 1차원 배열이다.
+    - 즉, arr1은 **1차원 배열이므로 배열의 이름이 가리키는 요소에 따라서 포인터 형이 결정된다.**
+    - 그런데 arr1은 int형 싱글 포인터 변수를 가리키므로!!! arr1의 포인터 형은 int형 더블 포인터이다.
+    - 따라서, 답은 `int ** ptr1 = arr1;`
+  + `int * arr2[3][5];` => arr2는 int형 포인터 변수로 이뤄진 2차원 배열이며 가로길이가 5이다.
+    - arr2는 **2차원 배열이므로 배열의 요소와 배열의 가로길이를 통해서 포인터 형이 결정된다.**
+    - 그런데 arr2가 가리키는 것은 int*형 변수이고, 가로길이는 [5]이므로
+    - `int* (*ptr2)[5] = arr2;`
