--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -332,7 +332,7 @@
     int arr2[2][3];
 
     printf("arr1: %p \n", arr1);          // 004BFBE0
-    printf("arr1+1: %p \n", arr1+1);      // 004BFBE0
+    printf("arr1+1: %p \n", arr1+1);      // 004BFBE8
     printf("arr1+2: %p \n\n", arr1+2);    // 004BFBF0    // 8씩 증가
 
     printf("arr2: %p \n", arr2);          // 004BFBC0
@@ -381,7 +381,7 @@
 
     ptr = arr2;
     printf("Show 3,2 arr2 \n");
-    for (i = 0; i < 2; i++) {
+    for (i = 0; i < 3; i++) {
       printf("%d %d \n", ptr[i][0], ptr[i][1]);
     }
   ```
@@ -399,7 +399,7 @@
   int i, j;
 
   int * whoA[4] = {&num1, &num2, &num3, &num4};     // 포인터 배열
-  int (*whoA)[4] = arr2d;                           // 배열 포인터
+  int (*whoB)[4] = arr2d;                           // 배열 포인터
 
   printf("%d %d %d %d \n", *whoA[0], *whoA[1], *whoA[2], *whoA[3]);
   for (i = 0; i < 2; i++) {
@@ -462,3 +462,227 @@
     - arr2는 **2차원 배열이므로 배열의 요소와 배열의 가로길이를 통해서 포인터 형이 결정된다.**
     - 그런데 arr2가 가리키는 것은 int*형 변수이고, 가로길이는 [5]이므로
     - `int* (*ptr2)[5] = arr2;`
+
+## 19. 함수 포인터와 void 포인터
+### 19.1 함수 포인터와 void 포인터
+- 변수만 메모리 공간에 저장되는 것은 아니다.
+- 프로그램 실행의 흐름을 구성하는 함수들도 바이너리 형태로 메모리 공간에 저장되어 호출 시 실행된다.
+- **함수 포인터 변수**: 메모리상에 저장된 함수의 주소 값을 저장하는 포인터 변수
+#### 19.1.1 함수 포인터의 이해
+- 프로그래머가 정의하는 모든 함수는 프로그램 실행 시 '메인 메모리'에 저장되어서 실행이 된다.
+- 그리고, 함수의 이름은 메모리상에 저장된 함수의 주소 값을 의미한다.
+- **배열의 이름이 배열의 시작주소 값을 의미하듯이, 함수의 이름도 함수가 저장된 메모리 공간의 주소 값을 의미한다.**
+- 배열의 이름과 마찬가지로 함수의 이름도 그 형태가 상수이다.
+- 함수 포인터 변수는 어떻게 선언해야 할까? 이를 위해서는 우선 함수 **포인터의 포인터 형** 을 결정해야 한다.
+- 모든 변수가 그러하듯이 형을 결정하지 못한다면 적절한 함수 포인터 변수의 선언은 불가능하다.
+- **함수이름의 포인터 형은 반환형과 매개변수의 선언을 통해서 결정짓도록 약속되어 있다.**
+  + ex. `int SimpleFunc(int num) {...}`  ==> 반환형이 int, 매개변수도 int
+#### 19.1.2 적절한 함수 포인터 변수의 선언
+- 함수의 주소 값(함수 포인터의 값)을 저장할 수 있는 포인터 변수는 어떻게 선언해야 할까?
+- 이 포인터 변수에는 반환형 정보와 매개변수 선언의 정보가 모두 표현되어 있어야 한다.
+  ```
+    int (*fptr) (int)     // 반환형이 int이며, 매개변수 선언이 int 하나인 함수 포인터 fptr!
+  ```
+- ex.
+  + `int SoSimple(int num1, int num2) {...}` ===> `int (*fptr) (int, int);`
+  + 이 함수 포인터 변수에 함수 SoSimple의 주소 값을 저장하려면 ===> `fptr = SoSimple;`
+  + 이렇게 대입연산이 끝나고 나면 fptr과 SoSimple에는 동일 값이 저장되며, 상수냐 변수냐의 차이만 존재하게 된다.
+  + 따라서, `fptr(3, 4);   // SoSimple(3, 4)와 동일한 결과를 보인다.`
+1. 함수 포인터 변수 사용 예제 1
+  ```javascript
+    void SimpleAdder(int n1, int n2) {
+      printf("%d + %d = %d \n", n1, n2, n1 + n2);       // 10 + 20 = 30
+    }
+
+    void ShowString(char* str) {
+      printf("%s \n", str);                             // Function Pointer
+    }
+
+    int main(void) {
+      char* str = "Function Pointer";
+      int num1 = 10, num20 = 20;
+
+      void (*fptr1)(int, int) = SimpleAdder;
+      void (*fptr2)(char *) = ShowString;
+
+      // 함수 포인터 변수에 의한 호출
+      fptr1(num1, num2);
+      fptr2(str);
+      return 0;
+    }
+  ```
+2. 함수 포인터 변수 사용 예제 2
+  ```c
+    int WhoIsFirst(int age1, int age2, int (*cmp)(int n1, int n2)) {
+      return cmp(age1, age2);
+    }
+
+    int OlderFirst(int age1, int age2) {
+      if (age1 > age2) {
+        return age1;
+      } else if (age1 < age2) {
+        return age2;
+      } else {
+        return 0;
+      }
+    }
+
+    int YoungerFirst(int age1, int age2) {
+      if (age1 < age2) {
+        return age1;
+      } else if (age1 > age2) {
+        return age2;
+      } else {
+        return 0;
+      }
+    }
+
+    int main(void) {
+      int age1 = 20;
+      int age2 = 30;
+      int first;
+
+      printf("입장순서 1 \n");                                         // 입장순서 1
+      first = WhoIsFirst(age1, age2, OlderFirst);
+      printf("%d세와 %d세 중 %d세가 먼저 입장! \n\n", age1, age2, first); // 20세와 30세 중 30세가 먼저 입장!
+
+      printf("입장순서 2 \n");                                         // 입장순서 2
+      first = WhoIsFirst(age1, age2, YoungerFirst);
+      printf("%d세와 %d세 중 %d세가 먼저 입장! \n\n", age1, age2, first); // 20세와 30세 중 20세가 먼저 입장!
+      return 0;      
+    }
+  ```
+  + 이처럼 함수 포인터를 통해서 함수의 동작방식에 유연성을 제공할 수도 있다.
+  + 또한 전달되는 인자에 따라서 달리 동작하는 함수의 정의도 가능함을 알 수 있다.
+
+#### 19.1.3 '형(Type)'이 존재하지 않는 void 포인터
+- `void * ptr;` ===> 이런식으로 선언되는 포인터 변수를 가리켜 **void형 포인터 변수** 라고 한다.
+- void형 포인터 변수는 어떠한 변수의 주소 값이든 담을 수 있다. (\+ 함수의 주소 값도 가능)
+  ```c
+    void SoSimpleFunc(void) {
+      printf("I'm so simple \n");
+    }
+
+    int main(void) {
+      int num = 20;
+      void * ptr;
+
+      ptr = &num;             // 변수 num의 주소 값 저장
+      printf("%p \n", ptr);
+
+      ptr = SoSimpleFunc;     // 함수 SoSimpleFunc의 주소 값 저장
+      printf("%p \n", ptr);
+      void (*fptr) (void) = ptr;
+      fptr();                 // I'm so simple
+      return 0;
+    }
+  ```
+  + 위의 예제처럼 void형 포인터 변수는 어떠한 변수의 주소 값이든 담을 수 있으나,
+  + **이 void형 포인터 변수로는 아무런 포인터 연산도 하지 못한다.** 값의 변경이나 참조 또한 불가능하다는 단점 존재.
+  + void형 포인터 변수에는 가리키는 대상에 대한 어떠한 형(type) 정보도 담겨있지 않기 때문이다.
+    ```
+      int num = 20;
+      void * ptr = &num;
+      *ptr = 20;          // 컴파일 에러!
+      ptr++;              // 컴파일 에러!
+    ```
+  + 그래서 void형 포인터는 **일단 주소 값에만 의미를 두고, 포인터의 형은 나중에 결정할 때** 유용하게 사용된다.
+  + 이런 상황은 Chapter 25의 '메모리 동적 할당'과 깊은 관계가 있다.
+
+### 19.2 main 함수로의 인자전달
+- `int main(void) {...}`  ==> 지금까지 우리가 보아온 main 함수의 정의형태
+- `int main(int argc, char* argv[]) {...}` ===> 이렇게 main 함수를 정의하는 것도 가능.
+#### 19.2.1 main 함수를 통한 인자의 전달
+- 프로그램 실행시 main 함수로 전달할 인자를 결정할 수 있으며,
+- main 함수 역시 이러한 인자를 전달받을 수 있도록 제한된 형태의 매개변수 선언이 가능하다.
+  ```c
+    int main(int argc, char* argv[]) {
+      int i = 0;
+      printf("전달된 문자열의 수: %d \n", argc);
+
+      for (i = 0; i < argc; i++) {
+        printf("%d번째 문자열: %s \n", i+1, argv[i]);
+      }
+      return 0;
+    }
+  ```
+  실행결과
+  ```
+    전달된 문자열의 수: 1
+    1번째 문자열: /Users/julie/Library/Developer/Xcode/DerivedData/TEST-ebfydqowacxmmncyikqvknheyppz/Build/Products/Debug/TEST
+  ```
+  해당 파일 .exe를 실행해서 `c:\>ArgcArgv I like you`를 입력할 경우 아래와 같이 출력된다.
+  ```
+    전달된 문자열의 수: 4
+    1번째 문자열: ArgcArgv
+    2번째 문자열: I
+    3번째 문자열: like
+    4번째 문자열: you
+  ```
+#### 19.2.2 char * argv[]
+- 이 포인터 변수 선언은 앞에서 학습했던 유형의 포인터 변수 선언이다.
+  ```c
+    void SimpleFunc(TYPE * arr) {...}
+    void SimpleFunc(TYPE arr[]) {...}   // 매개변수 선언에서 이 두 선언은 같은 선언!
+  ```
+  이는 TYPE형 1차원 배열의 이름(주소 값)을 인자로 전달받을 수 있는 매개변수 선언이다. TYPE을 char*로 바꿔보면...
+  ```c
+    void SimpleFunc(char **arr) {...}
+    void SimpleFunc(char * arr[]) {...}
+  ```
+  즉, **main 함수의 매개변수 argv는 char형 더블 포인터 변수이고, 이는 char형 포인터 변수로 이뤄진 1차원 배열의 이름을 전달받을 수 있는 매개변수이다.**
+  ```c
+    void ShowAllString(int argc, char * argv[]) {
+      int i;
+      for (i = 0; i < argc; i++) {
+        printf("%s \n", argv[i]);  // C Programming \n C++ Programming \n JAVA Programming
+      }
+    }
+
+    int main(void) {
+      char * str[3] = {"C Programming", "C++ Programming", "JAVA Programming"};
+      ShowAllString(3, str);
+      return 0;
+    }
+  ```
+  argv는 char형 더블 포인터 변수이므로, argv에는 char**형 데이터가(주소 값이) 전달될 수 있다.
+#### 19.2.3 인자의 형성과정
+- `c:\>ArgcArgv I like you` ==> ArgcArgv.c에서 ArgcArgv는 ArgcArgv.exe의 실행을 명령. 공백이 문자열을 나누는 기준.
+  |문자열|문자열 정보|
+  |-----|---------|
+  |문자열1|"ArgcArgv"|
+  |문자열2|"I"|
+  |문자열3|"like"|
+  |문자열4|"you"|
+  ```c
+    // char * strArr[5];
+    strArr[0] -------> ArgcArgv\0
+    strArr[1] -------> I\0
+    strArr[2] -------> like\0
+    strArr[3] -------> you\0
+    strArr[4] NULL
+  ```
+  위의 구성은 `main(4, strArr);`의 형태로 호출된다.
+  ```c
+    // 실행파일의 이름이 ArgvEndNULL.exe라 가정
+    #include <stdio.h>
+
+    int main(int argc, char* argv[]) {
+      int i = 0;
+      printf("전달된 문자열의 수: %d \n", argc);
+
+      while(argv[i] != NULL) {
+        printf("%d번째 문자열: %s \n", i+1, argv[i]);
+        i++;
+      }
+      return 0;
+    }
+  ```
+  `C:\>ArgvEndNULL "I love you"` ==> 이렇게 실행하면
+  ```
+    전달된 문자열의 수: 2
+    1번째 문자열: ArgvEndNULL
+    2번째 문자열: I love you
+  ```
+  큰 따옴표로 묶어서 호출하면 공백을 포함하는 문자열을 생성해서 main 함수의 인자로 전달하는 것이 가능하다.
+  
