--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -648,12 +648,12 @@
   argv는 char형 더블 포인터 변수이므로, argv에는 char**형 데이터가(주소 값이) 전달될 수 있다.
 #### 19.2.3 인자의 형성과정
 - `c:\>ArgcArgv I like you` ==> ArgcArgv.c에서 ArgcArgv는 ArgcArgv.exe의 실행을 명령. 공백이 문자열을 나누는 기준.
-|문자열|문자열 정보|
-|:-----:|:---------:|
-|문자열1|"ArgcArgv"|
-|문자열2|"I"|
-|문자열3|"like"|
-|문자열4|"you"|
+  문자열|문자열 정보
+  :-----:|:---------:
+  문자열1|"ArgcArgv"
+  문자열2|"I"
+  문자열3|"like"
+  문자열4|"you"
   ```c
     // char * strArr[5];
     strArr[0] -------> ArgcArgv\0
