--- a/C/04_포인터와배열의완성.md
+++ b/C/04_포인터와배열의완성.md
@@ -6,30 +6,30 @@
 - 2차원 배열은 평면구조의 배열, 3차원 배열은 직육면체구조의 배열이다.
 - C언어는 4차원 이상의 배열선언을 문법적으로 허용하긴 하지만, 불필요하기도 하고 논리적으로 이해하기도 어려운 형태의 배열이다.
 - 1,2,3차원 배열의 선언형태
-  ```
+  ```c
     int arrOneDim[10];          // 길이가 10인 1차원 int형 배열
     int arrTwoDim[5][5];        // 가로, 세로의 길이가 각각 5인 2차원 int형 배열
     int arrThreeDim[3][3][3];   // 가로, 세로, 높이의 길이가 각각 3인 3차원 int형 배열
   ```
 #### 16.1.2 다차원 배열을 대표하는 2차원 배열의 선언
-```
+```c
   int arr1[3][4];   
   int arr2[7][9];   
 ```
 이와 같이 2차원 배열의 선언형태는 `TYPE arr[행][열];`
 - sizeof 연산자의 피연산자로 배열의 이름이 오면, 배열의 크기가 바이트 단위로 계산되어 반환되었듯이 2차원 배열의 크기도 계산 가능
-```
+```c
   printf("세로3, 가로4: %d \n", sizeof(arr1));      // 48
   printf("세로7, 가로9: %d \n", sizeof(arr2));      // 252
 ```
 #### 16.1.3 2차원 배열요소의 접근
-```
+```javascript
   arr[N-1][M-1] = 20;           // 행 N, 열 M의 위치에 정수 20을 저장
   printf("%d", arr[N-1][M-1]);  // 행 N, 열 M의 위치에 저장된 값 출력
 ```
 #### 16.1.4 2차원 배열의 메모리상 할당의 형태
 - 2차원 배열이라 해도 메모리상에는 1차원의 형태로 존재한다.
-  ```
+  ```javascript
     int arr[3][2];
     int i, j;
     for (i = 0; i < 3; i++) {
@@ -39,7 +39,7 @@
     }
   ```
   + 실행결과 => int형 변수의 크기인 4바이트 만큼 차이가 난다.
-  ```
+  ```javascript
     0x7fff5fbff750
     0x7fff5fbff754
     0x7fff5fbff758
@@ -49,7 +49,7 @@
   ```
 #### 16.1.5 2차원 배열 선언과 동시에 초기화하기
 1.
-  ```
+  ```c
     int arr[3][3] = {
       {1, 2, 3},
       {4, 5, 6},
@@ -59,7 +59,7 @@
   행 단위로 초기화할 값들을 별도의 중괄호로 명시해야 한다.
 
 2.
-  ```
+  ```c
     int arr[3][3] = {
       {1},
       {4, 5},
@@ -67,7 +67,7 @@
     };
   ```
   모든 배열요소를 초기화해야 하는 것은 아니다. 빈 공간은 0으로 초기화 된다. 따라서,
-  ```
+  ```c
     int arr[3][3] = {
       {1, 0, 0},
       {4, 5, 0},
@@ -76,7 +76,7 @@
   ```
 
 3.
-  ```
+  ```c
     int arr[3][3] = {
       1, 2, 3,
       4, 5, 6,
@@ -92,20 +92,20 @@
 - 2차원 배열의 경우에도 초기화 리스트가 존재한다면, 길이를 명시하지 않아도 되지만 **제약사항** 이 존재한다.
   + `int arr[][] = {1, 2, 3, 4, 5, 6, 7, 8};` 다음과 같은 경우 행과 열의 길이를 어떻게 결정하겠냐?
   + 행과 열의 길이를 모두 예측하는 것은 불가능하니 한 쪽을 명시해주어야 하는데 이 때, **행의 길이만 생략이 가능** 하다.
-  ```
+  ```c
     int arr1[][4] = {1, 2, 3, 4, 5, 6, 7, 8};
     int arr2[][2] = {1, 2, 3, 4, 5, 6, 7, 8};
   ```
 ### 16.2 3차원 배열
 - 3차원 배열은 흔히 사용되는 배열이 아니다. 매우 제한적인 상황에서 사용된다.
 - 3차원 배열은 가로와 세로로 이뤄진 2차원 배열에 높이의 개념이 추가되어 있다.
-  ```
+  ```c
     int arr1[2][3][4];      // 높이 2, 세로 3, 가로 4인 int형 3차원 배열
     printf("높이2, 세로3, 가로4 int형 배열: %d \n", sizeof(arr1));   // 2 * 3 * 4 * sizeof(int) = 96
   ```
 #### 16.2.1 3차원 배열의 선언과 접근
 - ex. 어느 고등학교 3학년 전체 학생의 국어와 수학점수를 반별로 구분하여 저장한 예. 각 반별 학생수는 3명, 학급의 수도 3개
-  ```
+  ```c
     int record[3][3][2] = {
       {70, 80},               // A 학급 학생 1의 성적
       {94, 90},               //       학생 2
@@ -130,7 +130,7 @@
 - `int ** dptr;` => int형 이중 포인터
 #### 17.1.1 포인터 변수를 가리키는 이중 포인터 변수 (더블 포인터 변수)
 - **포인터 변수는 종류에 상관없이 무조건 주소 값을 저장하는 변수** 이다. 다만 포인터 변수가 가리키는 대상의 차이만 있을뿐.
-  ```
+  ```c
     double num = 3.14;
     double* ptr = &num;   // 변수 num의 주소 값 저장
   ```
@@ -141,11 +141,11 @@
     - 이 때 반환되는 주소 값은 'double형 더블 포인터 변수'에 저장이 가능하다.
       + `double ** dptr = &ptr;`
       + 즉, `dptr` ----> `ptr` ----> `num`
-      ```
+      ```javascript
         *dptr = ...;      // *dptr은 포인터 변수 ptr을 의미함
         *(*dptr) = ...;   // *(*dptr)은 변수 num을 의미함 (== **dptr)
       ```
-  ```
+  ```c
     double num = 3.14;
     double * ptr = &num;
     double ** dptr = &ptr;
@@ -158,14 +158,14 @@
     printf("%9g %9g \n", num, **dptr);
   ```
   + 여기서 변수 num에 접근하는 방법은 총 4가지가 있음을 알 수 있다.
-  ```
+  ```c
     **dptr = 10.1;    // 변수 num에 10.1이 저장됨
     *ptr = 20.2;      // 변수 num에 20.2가 저장됨
     *ptr2 = 30.3;     // 변수 num에 30.3이 저장됨
     num = 40.4;       // 변수 num에 접근하는 가장 기본적인 방법
   ```
 #### 17.1.2 포인터 변수 대상의 Call-by-reference
-```
+```javascript
   void SwapChange(int * ptr1, int * ptr2) {
     int temp = *ptr1;
     *ptr1 = *ptr2;
@@ -174,7 +174,7 @@
 ```
 - 이전에 위와 같이 두 변수의 저장된 값을 변경했었다. ===> 두 싱글 포인터 변수에 저장된 값을 바꾸는 함수로 수정해보자.
 - 즉, 포인터 변수의 참조관계를 바꿔주는 함수를 정의하려는 것
-  ```
+  ```javascript
     void SwapIntPtr(int *p1, int *p2) {
       int * temp = p1;
       p1 = p2;
@@ -195,7 +195,7 @@
   + 위의 경우 SwapIntPtr 함수를 호출한 이후에도 값이 서로 바뀌지 않는다.
   + ptr1과 ptr2는 매개변수로 값을 전달만 해준것이기 때문이다. 그렇다면 어떻게?
   + 이를 위해서는 함수 내에서 포인터 변수 ptr1과 ptr2에 **직접 접근** 이 가능해야 한다.
-    ```
+    ```javascript
       void SwapIntPtr(int **dp1, int **dp2) {
         int *temp = *dp1;
         *dp1 = *dp2;
@@ -214,7 +214,7 @@
       }
     ```
 #### 17.1.3 포인터 배열과 포인터 배열의 포인터 형
-```
+```c
   int * arr1[20];       // 길이가 20인 int형 포인터 배열 arr1
   double * arr2[30];    // 길이가 30인 double형 포인터 배열 arr2
 ```
@@ -222,7 +222,7 @@
   + 이 역시 1차원 배열이기 때문에 배열이름이 가리키는 첫 번째 요소의 자료형에 따라서 포인터 형이 결정된다.
   + 즉, arr1이 가리키는 첫 번째 요소는 int형 싱글 포인터이니 배열이름 arr1은 int형 더블 포인터가 된다.
   + arr2가 가리키는 첫 번째 요소는 double형 싱글 포인터이니 배열이름 arr2는 double형 더블 포인터가 된다.
-  ```
+  ```c
     int num1 = 10, num2 = 20, num3 = 30;
     int *ptr1 = &num1, *ptr2 = &num2, *ptr3 = &num3;
 
@@ -240,7 +240,7 @@
 #### 17.2.1 이중 포인터를 가리키는 삼중 포인터
 - `int ***tptr;` ===> tptr은 삼중 포인터 변수
 - 삼중 포인터 변수는 이중 포인터 변수를 가리키는 용도로, 이중 포인터 변수의 주소 값을 저장하는 용도로 사용된다.
-  ```
+  ```c
     int num = 100;
     int *ptr = &num;
     int **dptr = &ptr;
@@ -256,7 +256,7 @@
 
 #### ex. 이중 포인터 변수의 활용
 - 다음과 같이 두 개의 int형 포인터 변수와 길이가 5인 int형 배열을 선언한다.
-  ```
+  ```c
     int * maxPtr;
     int * minPtr;
     int arr[5];
@@ -389,7 +389,7 @@
 
 ### 18.2 2차원 배열이름의 특성과 주의사항
 #### 18.2.1 '배열 포인터'와 '포인터 배열'을 혼동하지 말자!
-```
+```javascript
   int * whoA[4];    // 포인터 배열   // int형 포인터 변수로 이루어진 int형 포인터 배열
   int (*whoA)[4];   // 배열 포인터   // 가로길이가 4인 int형 2차원 배열을 가리키는 용도의 포인터 변수
 ```
@@ -430,7 +430,7 @@
     ```
     이 둘은 매개변수의 선언에서만 같은 의미를 지닌다.
 #### 18.2.3 2차원 배열에서도 arr[i]와 \*(arr+i)는 같다.
-```
+```c
   int arr[3][2] = {{1, 2}, {3, 4}, {5, 6}};
 ```
 - 6이 저장된 인덱스 `arr[2][1]`의 값을 변경하는 방법
@@ -480,7 +480,7 @@
 #### 19.1.2 적절한 함수 포인터 변수의 선언
 - 함수의 주소 값(함수 포인터의 값)을 저장할 수 있는 포인터 변수는 어떻게 선언해야 할까?
 - 이 포인터 변수에는 반환형 정보와 매개변수 선언의 정보가 모두 표현되어 있어야 한다.
-  ```
+  ```javascript
     int (*fptr) (int)     // 반환형이 int이며, 매개변수 선언이 int 하나인 함수 포인터 fptr!
   ```
 - ex.
@@ -580,7 +580,7 @@
   + 위의 예제처럼 void형 포인터 변수는 어떠한 변수의 주소 값이든 담을 수 있으나,
   + **이 void형 포인터 변수로는 아무런 포인터 연산도 하지 못한다.** 값의 변경이나 참조 또한 불가능하다는 단점 존재.
   + void형 포인터 변수에는 가리키는 대상에 대한 어떠한 형(type) 정보도 담겨있지 않기 때문이다.
-    ```
+    ```c
       int num = 20;
       void * ptr = &num;
       *ptr = 20;          // 컴파일 에러!
@@ -607,12 +607,12 @@
     }
   ```
   실행결과
-  ```
+  ```c
     전달된 문자열의 수: 1
     1번째 문자열: /Users/julie/Library/Developer/Xcode/DerivedData/TEST-ebfydqowacxmmncyikqvknheyppz/Build/Products/Debug/TEST
   ```
   해당 파일 .exe를 실행해서 `c:\>ArgcArgv I like you`를 입력할 경우 아래와 같이 출력된다.
-  ```
+  ```c
     전달된 문자열의 수: 4
     1번째 문자열: ArgcArgv
     2번째 문자열: I
@@ -679,7 +679,7 @@
     }
   ```
   `C:\>ArgvEndNULL "I love you"` ==> 이렇게 실행하면
-  ```
+  ```c
     전달된 문자열의 수: 2
     1번째 문자열: ArgvEndNULL
     2번째 문자열: I love you
