--- a/C/03_배열과포인터.md
+++ b/C/03_배열과포인터.md
@@ -3,11 +3,11 @@
 ### 11.1 배열의 이해와 선언 및 초기화 방법
 - **배열**: 둘 이상의 변수를 모아 놓은 것. 다수의 데이터를 저장하고 처리하는 경우에 유용하다.
 #### 11.1.1 1차원 배열의 선언에 필요한 것 3가지: 배열이름, 자료형, 길이정보
-```
+```c
   //자료형   이름  길이
   int oneDimArr [4];
 ```
-```
+```c
   int len = 20;
   int arr[len];   // 변수 len을 이용한 배열의 길이 선언이 가능하다.
 ```
@@ -27,14 +27,14 @@
 - char형 배열을 이용하면 문자열의 저장뿐만 아니라 문자열의 변경도 가능해진다.
 #### 11.2.1 char형 배열의 문자열 저장과 '널(null)'문자
 - **C언어에서는 큰 따옴표를 이용해서 문자열을 표현한다.**
-  ```
+  ```c
     char str[14] = "Good morning!";
     char str[] = "Good morning!";
   ```
   이렇게 컴파일러가 문자열의 길이를 계산하도록 설정해도 된다.
 - 문자열의 저장을 목적으로 char형 배열을 선언할 경우에는 특수문자(escape sequence) `\0`이 저장될 공간까지 고려해야 한다.
 - **널(null)** 문자: 문자열의 끝에 자동으로 삽입되는 문자 `\0`
-  ```
+  ```c
     printf("널 문자 문자형 출력: %c \n", str[13]);  //
     printf("널 문자 정수형 출력: %d \n", str[13]);  // 0
   ```
@@ -42,7 +42,7 @@
   + **널 문자와 공백 문자는 엄연히 다르다!** 널 문자의 아스키코드 값은 0, 공백 문자의 아스키코드 값은 32
 
 #### 11.2.2 scanf 함수를 이용한 문자열의 입력
-```
+```c
   char str[50];
   scanf("%s", str);   // 문자열을 입력 받아서 배열 str에 저장!
 ```
@@ -51,7 +51,7 @@
 - scanf 함수를 통해서 입력 받은 문자열의 끝에도 널 문자가 삽입되어 있다.
 - **C언어에서 표현되는 모든 문자열의 끝에는 널 문자가 자동으로 삽입된다!**
 - **널 문자가 존재하면 문자열이고, 널 문자가 존재하지 않으면 문자열이 아니다!**
-  ```
+  ```c
     char arr1[] = {'H', 'i', '~'};        // 마지막에 널 문자가 없으므로 문자 배열
     char arr2[] = {'H', 'i', '~', '\0'};  // 마지막에 널 문자가 있으므로 문자열
   ```
@@ -60,7 +60,7 @@
 - 메모리상에서 문자열은 이진 데이터로 저장되기 때문에 문자열의 시작과 끝이 표시되어 있지 않다면 문자열을 구분하는 것이 불가능하다.
 - `char str[100] = "~~~";`  str[0]이 문자열의 시작위치고, 문자열의 끝에는 널 문자가 삽입되어 있겠구나...
 - 널 문자의 아스키코드 값은 0이므로 다음 두 문장은 동일한 문장이다.
-  ```
+  ```c
     str[8] = '\0';
     str[8] = 0;
   ```
@@ -76,7 +76,7 @@
 - 포인터는 '변수 형태의 포인터'와 '상수 형태의 포인터'를 어우르는 표현이지만, 대부분 포인터 변수와 관련되어 있다.
 
 #### 12.1.2 포인터 변수 & 연산자
-```
+```javascript
   int main(void) {
     int num = 7;      
     int * pnum;        // 포인터 변수 pnum의 선언
@@ -89,7 +89,7 @@
 #### 12.1.3 포인터 변수 선언하기
 - 포인터 변수는 가리키고자 하는 변수의 자료형에 따라 선언하는 방법이 달라지지만, `type * ptr; // type형 변수의 주소 값을 저장`
 - 사실 주소 값은 동일한 시스템에서 그 크기가 동일하며 모두 정수의 형태를 띤다.
-```
+```javascript
   int * pnum1;
   double * pnum2;
   unsigned int * pnum3;
@@ -98,7 +98,7 @@
 - **포인터 형(type)**: int \*, char \*, double \* 등과 같이 포인터 변수의 선언 및 구분에 사용되는 키워드
 - 하지만 포인터 변수도 값을 저장하는 변수이므로 '포인터 형' 역시 '자료형'의 범주에 포함시키기도 한다.
 - 포인터에서 **\*의 위치** 는 상관이 없다.
-  ```
+  ```javascript
     double * ptr;
     double* ptr;
     double *ptr;      // 모두 동일한 의미를 갖는다.
@@ -112,7 +112,7 @@
 
 #### 12.2.1 포인터가 가리키는 메모리를 참조하는 * 연산자
 - \* 연산자는 포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자이다.
-  ```
+  ```javascript
     int num = 10;
     int* pnum = &num;
     *pnum = 20;                 // pnum이 가리키는 메모리 공간인 변수 num에 20을 저장
@@ -120,7 +120,7 @@
   ```
   즉, \*pnum은 포인터 변수 pnum이 가리키는 변수 num을 의미하는 것이다.
 
-```
+```javascript
   int num1 = 100, num2 = 100;
   int* pnum;
 
@@ -145,19 +145,19 @@
 ### 12.4 잘못된 포인터의 사용과 널 포인터
 - 포인터 변수에는 메모리의 주소 값이 저장되고, 이를 이용해서 해당 메모리 공간에 접근도 가능하기 때문에 상당한 주의가 필요하다.
   + 포인터 변수를 선언만하고 초기화 하지 않을 경우
-    ```
+    ```javascript
       int* ptr;       // 포인터 변수 ptr은 쓰레기 값으로 초기화 된다.
       *ptr = 200;
     ```
     ptr이 가리키는 위치가 어디인줄 알고!!! 만약, ptr이 가리키는 메모리 공간이 매우 중요한 위치였다면, 문제를 일으킬 수 있는 상황!
   + 엉뚱한 값으로 초기화 하는 경우
-    ```
+    ```javascript
       int* ptr = 125;   // 125번지가 어딘 줄 알고?
       *ptr = 10;
     ```
     쓰레기 값으로 포인터 변수를 초기화 한 것과 다르지 않다.
 - 그렇다면 포인터 변수는 어떤 값으로 초기화를 시켜야 하나?
-  ```
+  ```javascript
     int* ptr1 = 0;
     int* ptr2 = NULL;   // NULL은 사실상 0을 의미한다.
   ```
@@ -173,7 +173,7 @@
 - **배열의 이름도 포인터이다!!!**
 #### 13.1.1 배열의 이름은 무엇을 의미하는가?
 - 배열의 이름은 포인터이다. 다만, 그 값을 바꿀 수 없는 '상수 형태의 포인터'이다.
-  ```
+  ```javascript
     int arr[3] = {0, 1, 2};
     printf("배열의 이름: %p \n", arr);           // 0012FF50
     printf("첫 번째 요소: %p \n", &arr[0]);      // 0012FF50
@@ -191,7 +191,7 @@
   + 여기서 배열의 이름 arr1이 가리키는 것은 배열의 첫 번째 요소이다.
   + 그런데 배열의 첫 번째 요소가 int형 변수이니 => arr1은 **int형 포인터(int \*)** 라는 것을 알 수 있다.
 - 즉, 1차원 배열이름의 포인터 형은 배열의 이름이 가리키는 대상을 기준으로 결정하면 된다!
-  ```
+  ```javascript
     int arr1[3] = {1, 2, 3};
     double arr2[3] = {1.1, 2.2, 3.3};
 
@@ -203,7 +203,7 @@
 #### 13.1.3 포인터를 배열의 이름처럼 사용할 수도 있다.
 - 배열의 이름과 포인터 변수는 **상수냐 변수냐의 특성적 차이가 있을 뿐**, 둘 다 포인터이므로 ...
 - 포인터 변수로 할 수 있는 연산은 배열의 이름으로도 할 수 있고, 배열의 이름으로 할 수 있는 연산은 포인터 변수로도 할 수 있다.
-  ```
+  ```javascript
     int arr[3] = {15, 25, 35};
     int* ptr = &arr[0];         // int* ptr = arr; 과 동일한 문장
 
@@ -217,7 +217,7 @@
 ### 13.2 포인터 연산
 #### 13.2.1 포인터를 대상으로 하는 증가 및 감소연산
 - 포인터를 대상으로 메모리의 접근을 위한 * 연산 이외에 증가 및 감소연산도 가능하다.
-  ```
+  ```javascript
     int* ptr1 = 0x0010;       // 부적절한 초기화지만, 연산 결과 확인용!
     double* ptr2 = 0x0010;
 
@@ -234,7 +234,7 @@
     - 즉, type형 포인터를 대상으로 n 증가 => **n * sizeof(type)** 의 크기만큼 증가
     - 감소의 경우에도 증가와 동일하다.
 - 이러한 포인터의 연산특성으로 인해 다음과 같은 형태의 배열접근이 가능하다.
-  ```
+  ```javascript
     int arr[3] = {11, 22, 33};
     int* ptr = arr;             // int* ptr = &arr[0] 과 동일한 의미
     printf("%d %d %d \n", *ptr, *(ptr + 1), *(ptr + 2));  // 11 22 33
@@ -246,14 +246,14 @@
     printf("%d \n", *ptr);                                // 11 22 33 22 11
   ```
 - 다음 두 연산의 차이점은?
-  ```
+  ```javascript
     *(++ptr) = 20;    // ptr에 저장된 값 자체를 변경
     *(ptr+1) = 20;    // ptr에 저장된 값은 변경되지 않음. 결과 값만 얻어냄
   ```
   + 두 문장 모두 현재 ptr이 가리키는 위치에서 4바이트 떨어진 메모리 공간에 20을 저장하는 문장이다.
 
 #### 13.2.2 중요한 결론! arr[i] == \*(arr+i)
-```
+```javascript
   int arr[3] = {11, 22, 33};
   int* ptr = arr;
 
@@ -274,13 +274,13 @@
     - str2는 메모리상에 자동으로 저장된 문자열 "Your String"의 첫 번째 문자를 단순히 가리키고만 있는 포인터 변수
   + str1도 실제로는 문자 'M'의 주소 값이기 때문에 str1도 str2도 문자열의 시작 주소 값을 담고 있다는 측면에서는 동일하다.
   + 다만, **str1은 계속해서 문자 M이 저장된 위치를 가리키는 상태이어야 하지만, 포인터 변수 str2는 다른 위치를 가리킬 수 있다.**
-    ```
+    ```javascript
       char* str = "Your Team";
       str = "Our Team";       // str이 가리키는 대상을 문자열 "Our Team"으로 변경할 수 있음
     ```
     str1의 경우 상수형태의 포인터이므로 위와 같이 가리키는 대상 변경이 불가능!!
   + 배열을 대상으로한 값의 변경
-    ```
+    ```c
       char str1[] = "My String";      // 변수 형태의 문자열
       char* str2 = "Your String";     // 상수 형태의 문자열. 배열을 대상으로 값 변경 불가
 
@@ -297,7 +297,7 @@
     - 이와 같은 경우에도 큰따옴표로 묶여서 표현되는 문자열은 그 형태에 상관없이 메모리 공간에 저장된 후 그 주소값이 반환된다.
     - `printf(0x1234);` => printf 함수는 문자열을 통째로 전달받는 함수가 아닌, 문자열의 주소 값을 전달받는 함수이다.
     - ex.
-      ```
+      ```c
         WhoAreYou("Hong");  // WhoAreYou라는 함수호출 (실제 전달 값은 문자 H의 주소값이므로 반환형은 void라 가정)
         void WhoAreYou(char * str) {...}
       ```
@@ -306,12 +306,12 @@
 - 지금까지는 기본 자료형의 변수를 요소로 지니는 배열만 선언했으나, 포인터 변수도 변수이니 이를 대상으로 배열을 선언할 수 있다!
 #### 13.4.1 포인터 배열의 이해
 - **포인터 배열**: 포인터 변수로 이루어져 주소 값의 저장이 가능한 배열
-  ```
+  ```c
     int* arr1[20];      // 길이가 20인 int형 포인터 배열 arr1
     double* arr2[30];   // 길이가 30인 double형 포인터 배열 arr2
   ```
 - 포인터 배열의 선언과 활용
-  ```
+  ```c
     int num1 = 10, num2 = 20, num3 = 30;
     int* arr[3] = {&num1, &num2, &num3};
 
@@ -322,7 +322,7 @@
 - 문자열을 저장하는 포인터 배열
   + **문자열 배열**: 문자열의 주소 값을 저장할 수 있는 배열. (= char형 포인터 배열)
   + `char* strArr[3];` => char형 포인터 배열은 문자열의 주소 값을 저장할 수 있어 문자열 배열로 불린다.
-    ```
+    ```c
       char* strArr[3] = {"Simple", "String", "Array"};
       printf("%s \n", strArr[0]);     // Simple
       printf("%s \n", strArr[1]);     // String
@@ -335,7 +335,7 @@
 ### 14.1 함수의 인자로 배열 전달하기
 #### 14.1.1 인자전달의 기본방식은 값의 복사이다!
 - 함수호출 시 전달되는 인자의 값은 매개변수에 복사가 된다.
-  ```
+  ```c
     int SimpleFunc(int num) {...}
     int main(void) {
       int age = 17;
@@ -352,7 +352,7 @@
 #### 14.1.2 배열을 함수의 인자로 전달하는 방식
 - 아파트를 보고 싶어 하는 사람 앞에 아파트를 통째로 복사해다 놓을 수 없다면, 아파트의 주소를 가르쳐줘서 직접 찾아가게 하면 된다.
 - 이처럼 배열을 통째로 전달하는 것이 불가능하다면, 배열의 주소 값을 인자로 전달해서 이를 통해 접근하도록 유도하는 방법
-  ```
+  ```c
     int arr[3] = {1, 2, 3};
     SimpleFunc(arr);    // SimpleFunc 함수를 호출하면서 배열 arr의 주소 값 전달
   ```
@@ -363,7 +363,7 @@
 - **배열의 주소 값만 안다면 어디서든 배열에 접근하여 저장된 값을 참조하고 변경할 수 있다.**
 
 #### 14.1.3 배열을 함수의 인자로 전달받는 함수의 또 다른 선언
-```
+```c
   void ShowArayElem(int* param, int len) {...}
 
   void ShowArayElem(int param[], int len) {...}
@@ -373,7 +373,7 @@
 - 그러나, 위의 두 선언이 동일하게 간주되는 경우는 **매개변수의 선언으로 제한** 된다.
   + `int* ptr = arr;    // int ptr[] = arr;로 대체 불가능`
 - 함수 내에서는 인자로 전달된 배열의 길이 계산 불가
-  ```
+  ```c
     void SimpleAryFunc1(int* arr) {
       int sz = sizeof(arr);   // 변수 sz에는 포인터 변수 arr의 크기가 저장
       ...
@@ -391,7 +391,7 @@
 - 메모리의 접근에 사용되는 주소 값을 전달하는 형태의 함수호출을 Call-by-reference라 한다.
 - 즉, Call-by-value와 Call-by-reference를 구분하는 기준은 함수의 인자로 전달되는 대상에 있다.
 #### 14.2.1 값을 전달하는 형태의 함수호출: Call-by-value
-  ```
+  ```javascript
     void SwapChange(int n1, int n2) {...}
 
     int main(void) {
@@ -403,7 +403,7 @@
   + SwapChange 함수 호출을 통해 num1과 num2의 값이 뒤바뀌길 기대하지만, 실제 num1과 num2의 값은 그대로임
 #### 14.2.2 주소 값을 전달하는 형태의 함수호출: Call-by-reference
 - 위의 예제에서 SwapChange 함수 내에서 num1과 num2에 직접 접근이 가능하도록 하면 두 값을 바꿀 수 있다.
-  ```
+  ```javascript
     void SwapChange(int* ptr1, int* ptr2) {
       int temp = *ptr1;
       *ptr1 = *ptr2;
@@ -415,7 +415,7 @@
     }
   ```
 #### 이제는 scanf 함수호출 시 & 연산자를 붙이는 이유를 알 수 있다.
-  ```
+  ```javascript
     int main(void) {
       int num;
       scanf("%d", &num);      // 변수 num의 주소 값을 scanf 함수에 전달
@@ -426,13 +426,13 @@
   + 그래야 num에 접근을 해서 값을 채워 넣을 수 있기 때문이다.
 - 즉, scanf 함수의 호출도 Call-by-reference 형태의 함수호출에 해당한다.
 - 그렇다면 문자열을 입력 받을 때에는 왜 & 연산자를 붙이지 않는 것일까?
-  ```
+  ```javascript
     char str[30];
     scanf("%s", str);     // scanf("%s", &str)은 틀린 표현
   ```
 ### 14.3 포인터 대상의 const 선언
 #### 14.3.1 포인터 변수가 참조하는 대상의 변경을 허용하지 않는 const 선언
-```
+```javascript
   int num = 20;
   const int* ptr = &num;
   *ptr = 30;    // 컴파일 에러!
@@ -445,7 +445,7 @@
 - const 선언은 포인터 변수의 이름 앞에 올 수도 있다.
 - `int* const ptr = &num;`
 - 이렇게 되면, 포인터 변수 ptr은 상수가 되며 한번 주소 값이 저장되면 그 값의 변경이 불가능하다.
-  ```
+  ```javascript
     int num1 = 20, num2 = 30;
     int* const ptr = &num1;
     ptr = &num2;      // 컴파일 에러!
@@ -454,14 +454,14 @@
   + ptr만 상수일 뿐, ptr이 가리키는 대상에 저장된 값을 변경하는 연산은 문제가 되지 않는다.
 - 두 가지 형태의 const 동시 선언
   + `const int* const ptr = &num;`
-    ```
+    ```javascript
       *ptr = 20;
       ptr = &age;         // 둘 다 컴파일 에러!
     ```
 #### 14.3.3 const 선언이 갖는 의미
 - const는 원래 C++에만 존재하던 키워드였는데 C언어의 표준 재정립 과정에서 추가됨
 - const 선언을 많이 하면 프로그램 코드의 안정성이 높아진다.
-  ```
+  ```javascript
     double PI = 3.1415;
     PI = 3.07;          // 실수로 삽입된 문장, 컴파일 시 발견 안됨
 
