--- a/C/02_C언어의기본2.md
+++ b/C/02_C언어의기본2.md
@@ -44,7 +44,7 @@
 - 그러므로 음의 정수를 출력하려면 반드시 `%d`를 사용해야 한다.
 - 8진수와 16진수는 음의 정수 표현에 거의 사용되지 않는 표현법이므로 서식문자에서도 양의 정수만 출력하도록 제한하고 있다.
 - 8진수를 8진수답게, 16진수를 16진수답게 출력하려면, 서식문자 %o, %x의 사이에 문자 #을 넣어서 `%#o`, `%#x`를 사용하면 된다.
-```
+```c
   int num1 = 7, num2 = 13;
   printf("%o %#o \n", num1, num1);      // 7  07
   printf("%x %#x \n", num2, num2);      // d  0xd
@@ -52,7 +52,7 @@
 - 이처럼 16진수로 출력할 경우 출력된 내용이 16진수 정보임을 알리기 위해 가급적이면 **#** 을 사용하는 것이 좋다.
 
 #### 6.4.2 실수의 출력을 위한 서식문자들: %f, %e, %g
-```
+```c
   printf("%f \n", 0.1234);          // 0.123400
   printf("%e \n", 0.1234);          // 1.234000e-001  // e표기법 기반
   printf("%f \n", 0.12345678);      // 0.123457
@@ -63,7 +63,7 @@
   + = 1.0 * 10^(-20)
   + 그러나, 프로그램 상에서는 지수를 표현할 수 없기 때문에,
   + = 1.0e-20 으로 표기한다.
-```
+```c
   double d1 = 1.23e-3;      // %f 스타일 출력  // 0.00123
   double d2 = 1.23e-4;      // %f 스타일 출력  // 0.000123
   double d3 = 1.23e-5;      // %e 스타일 출력  // 1.23e-005
@@ -92,24 +92,24 @@
 ## 7. 반복실행을 명령하는 반복문
 - 반복문의 구성에 있어서 가장 중요한 것은 **반복의 조건을 무너뜨리기 위한 최소한의 연산** 이다.
 ### 7.1 while문에 의한 문장의 반복
-```
+```c
   while(num < 3) {        // 반복의 조건은 num < 3
     printf("Hello World! \n");
     num++;
   }
 ```
 - 반복의 대상이 하나의 문장이라면 중괄호는 생략 가능하다.
-  ```
+  ```c
     while(num < 5)
       printf("Hello World! %d \n", num++);
   ```
-  ```
+  ```c
     while(num < 5)
       printf("Hello World! %d \n", num), num++;
   ```
 - 그러나 코드의 라인수가 줄어든다고 무조건 좋은 것은 아니므로 억지로 코드를 줄이는 것은 바람직하지 못하다.
 - 무한루프의 구성
-  ```
+  ```c
     while(1) {
       printf("Hello World! \n");
     }
@@ -122,7 +122,7 @@
 - while문과의 가장 큰 차이점은 **반복의 조건을 검사하는 시점** 에 있다!
 - do~while문의 경우 while문과 달리 '반복조건'을 뒷부분에서 검사한다.
 - **do~while문은 반복영역을 최소한 한번은 실행하는 구조** 이다. (선실행 후검사)
-```
+```c
   do {
     printf("Hello World! \n");
     num++;
@@ -131,7 +131,7 @@
 - while문의 경우, 반복의 조건이 앞 부분에 위치하므로 코드 작성 시에도, 이해하기에도 용이하다.
 - 그럼, do~while문은 언제쓰는가?
   + 반복영역이 무조건 한 번 이상 실행되어야 하는 경우!
-  ```
+  ```c
     #include <stdio.h>
     int main(void) {
       int total = 0, num = 0;
@@ -148,7 +148,7 @@
   ```
   + 사용자로부터 하나의 정수를 입력 받고 난 다음에야 비로소 진행할지 여부를 결정하므로...
   + 반복영역을 최소한 한번은 실행해야 한다. 이런 경우에는 while문 보다 do~while문이 자연스럽다.
-  ```
+  ```c
     정수 입력(0 to quit): 1
     정수 입력(0 to quit): 2
     정수 입력(0 to quit): 3
@@ -161,13 +161,13 @@
 ### 7.3 for문에 의한 문장의 반복
 - **for문은 반복문 중에서 가장 많이 사용된다.**
 - for문은 반복을 구성하기 위해 필요한 모든 것을 한데 묶을 수 있도록 만들어진 반복문이다.
-```
+```c
   for ( 초기식 ; 조건식 ; 증감식) {
     // 반복의 대상이 되는 문장들
   }
 ```
 - while문보다 코드가 간결하다!
-```
+```c
   int main(void) {
     for (int num = 0; num < 3; num++) {
       printf("Hi~");
@@ -175,7 +175,7 @@
   }
 ```
 - 아직도 일부 C 컴파일러는 for문의 '초기식' 위치에서의 변수선언을 허용하지 않고 있다. (최근 표준에서는 허용)
-```
+```c
   int num;      // 이와 같이 작성해야 모든 C 컴파일러에서 컴파일이 가능하다.
   for (num = 0; num < 3; num++)
 ```
@@ -183,7 +183,7 @@
   + 초기식: 본격적으로 반복을 시작하기에 앞서 딱 한번 실행된다.
   + 조건식: 매 반복의 시작에 앞서 실행되며, 그 결과를 기반으로 반복유무를 결정!
   + 증감식: 매 반복실행 후 마지막에 연산이 이뤄진다.
-  ```
+  ```c
     //      1           2       4
     for (int num = 0; num < 3; num++) {
       printf("Hi~! \n");    // 3
@@ -198,7 +198,7 @@
   + 예를 들어, 사용자로부터 임의의 값 입력을 기다리는 상황이라면, while문이 더 자연스러울 수 있다.
 - for문의 초기식과 증감식은 불필요한 경우 비워도 된다. ex. `for( ;input > 0; )`
 - for문을 이용한 무한루프 생성
-```
+```c
   for( ; ; ) {
     ...     // for문의 중간에 위치한 '조건식'이 비워질경우 무조건 '참'으로 인식되어 무한루프 형성됨
   }
@@ -210,7 +210,7 @@
 - 조건을 만족하는 if문이 발견되면 필요없는 나머지 if문은 건너뛰기 위해!
 #### 8.1.2 if...else if...else의 구성
 - 셋 이상의 블록 중 하나를 선택해서 실행하는 구조이다.
-```
+```c
   if (조건 1) {
     // 조건 1 만족 시 실행
   } else if (조건 2) {
@@ -223,7 +223,7 @@
 ```
 - 하나라도 조건이 만족되어 해당 블록을 실행하고 나면, **마지막에 있는 else** 까지도 그냥 건너뛴다.
 - **if...else if...else는 if~else를 중첩시킨 형태에 지나지 않는다!**
-  ```
+  ```c
     if (num < 0) {
       printf("입력 값은 0보다 작다. \n");
     } else if (num > 0) {
@@ -232,7 +232,7 @@
       printf("입력 값은 0이다. \n");
     }
   ```
-  ```
+  ```c
     if (num < 0) {
       printf("입력 값은 0보다 작다. \n");
     } else {
@@ -264,7 +264,7 @@
 
 ### 8.3 switch문에 의한 선택적 실행과 goto문
 - switch문은 if...else if...else와 유사하지만, 사용할 수 있는 영역은 제한적이다.
-```
+```c
   switch(num) {
     case 1:
       printf("1은 ONE \n");
@@ -284,7 +284,7 @@
 - **case문에서 break를 설정하지 않을 경우 이후의 레이블을 모두 실행하게 된다!**
 #### 8.3.1 break문을 생략한 형태의 switch문 구성
 - 해당 case문만 실행되도록 동작방식을 결정해 놓으면 break를 일일이 붙이는 수고를 덜 수 있지 않을까?
-```
+```javascript
   switch(sel) {
     case 'M':
     case 'm':
@@ -305,7 +305,7 @@
 #### 8.3.2 switch vs if...else if...else 비교
 - 분기의 수가 많아질 경우 가급적 switch문으로 구현을 한다!
 - switch문으로 구현할 수 있는 조건의 구성에는 한계가 존재한다! 이럴 땐 if...else if...else!
-  ```
+  ```javascript
     if (n >= 0 && n < 10) {
       printf("0이상 10미만! \n");
     } else if (n >= 10 && n < 20) {
@@ -323,7 +323,7 @@
 - goto문을 써야만 해결할 수 있는 문제의 상황도 제한적이며 설득력이 강하지도 않다.
 - 그래서 **goto문의 사용을 가급적 자제하거나 아예 사용하지 말자고 결론을 내리게 되었다.**
 - 기본 구성
-  ```
+  ```c
     int main(void) {
       ....
     rabbit:         // 위치지정에 사용된 rabbit이라는 이름의 레이블
@@ -333,7 +333,7 @@
     }
   ```
 - goto문 ex.
-```
+```javascript
   int main(void) {
     if (num == 1) {
       goto ONE;
@@ -364,7 +364,7 @@
   + 프로그램을 작은 크기의 함수들로 나눠서 구현하게 되면, 문제의 발생 및 프로그램의 요구사항 변경이 필요한 경우에 변경의 범위를 축소 및 제한할 수 있다.
 - C언어의 함수는 전달인자가 없거나 반환 값이 없는 경우도 있다.
   + printf 함수도 실제로는 값을 반환한다.
-  ```
+  ```c
     num1 = printf("12345\n");
     num2 = printf("I love my home\n");
     printf("%d %d \n", num1, num2);       // 6 15
@@ -376,20 +376,20 @@
 - **함수호출 시 전달할 수 있는 인자의 수는 여러 개가 될 수 있지만, 반환할 수 있는 값의 수는 하나이다!**
 - 함수의 유형 4가지
   + 유형 1: 전달인자 O , 반환 값 O
-    ```
+    ```c
       int Add(int num1, int num2) {
         return num1 + num2;
       }
     ```
   + 유형 2: 전달인자 O , 반환 값 X
-    ```
+    ```c
       void ShowAddResult(int num) {
         printf("덧셈결과 출력: %d \n", num);
       }
     ```
     - printf 함수는 매번 서식을 지정해야 하므로 위와 같이 printf를 대체할 수 있는 함수 구현 가능
   + 유형 3: 전달인자 X , 반환 값 O
-    ```
+    ```c
       int ReadNum(void) {
         int num;
         scanf("%d", &num);
@@ -399,7 +399,7 @@
     - 위와 같은 경우, 사용자로부터 정수를 입력 받을 때 scanf 함수보다 편리하게 입력 받을 수 있다.
     - 여기서 void는 '인자를 전달하지 않는다'라는 뜻이므로 함수 호출 시 인자를 전달하면 안 된다.
   + 유형 4: 전달인자 X , 반환 값 X
-    ```
+    ```c
       void HowToUseThisProg(void) {
         printf("두 개의 정수를 입력하시면 덧셈결과가 출력됩니다! \n");
         printf("자! 그럼 두 개의 정수를 입력하세요. \n");
@@ -410,7 +410,7 @@
     - 함수를 빠져나간다.
     - 값을 반환한다.
   + 반환형이 void로 선언된 함수에서도 return문을 사용할 수 있다!
-    ```
+    ```javascript
       void NoReturnType(int num) {
         if (num < 0)
           return;       // 값을 반환하지 않는 return문!
@@ -419,7 +419,7 @@
     - **값의 반환 없이 그냥 함수를 빠져나간다!** 는 의미
 ### 9.1 함수의 정의와 그에 따른 원형의 선언
 - 함수는 호출되기 이전에 미리 정의되어야 한다!
-  ```
+  ```javascript
     int Increment(int n) {
       n++;
       return n;
@@ -432,7 +432,7 @@
     }
   ```
 - 혹은
-  ```
+  ```javascript
     int Increment(int n);       // 함수의 선언
 
     int main(void) {
@@ -448,7 +448,7 @@
   ```
   + 이렇게 함수의 선언을 미리 해주면 Increment함수의 정의가 main함수 뒤에 와도 에러가 발생하지 않는다.
   + 함수의 선언에는 매개변수의 갯수 및 자료형 정보만 포함되면 되기 때문에 매개변수의 이름 생략 가능하다.
-    ```
+    ```c
       int Increment(int);
     ```
 ### 9.2 변수의 존재기간과 접근범위 1: 지역변수
@@ -468,7 +468,7 @@
 
 ### 9.3 변수의 존재기간과 접근범위 2: 전역변수, static 변수, register 변수
 #### 9.3.1 전역변수 (Global Variable)
-  ```
+  ```c
     #include <stdio.h>
     int num;            // 전역변수는 기본 0으로 초기화 된다.
 
@@ -495,11 +495,11 @@
   + static 선언이 붙은 지역변수의 특성
     - 선언된 함수 내에서만 접근이 가능하다.
     - 딱 1회 초기화되고, 프로그램 종료 시까지 메모리 공간에 존재한다. (전역변수 특성)
-    ```
+    ```c
       static int num1 = 0;      // 초기화하지 않으면 0으로 초기화 된다.
       int num2 = 0;             // 초기화하지 않으면 쓰레기 값으로 초기화 된다.
     ```
-```
+```javascript
   void SimpleFunc(void) {
     static int num1 = 0;        // 사실은 존재하지 않는다고 생각하면 돼!
     int num2 = 0;
@@ -516,7 +516,7 @@
   }
 ```
 - 결과:
-  ```
+  ```c
     static: 1, local: 1
     static: 2, local: 1
     static: 3, local: 1
@@ -527,7 +527,7 @@
 
 #### 9.3.3 보다 빠르게! register 변수
 - 지역변수에 register라는 선언을 추가한 변수를 가리킨다.
-  ```
+  ```c
     int SoSimple(void) {
       register int num = 3;
     }
@@ -541,7 +541,7 @@
 
 ### 9.4 재귀함수에 대한 이해
 - **재귀함수**: 함수 내에서 자기 자신을 다시 호출하는 함수를 의미한다.
-  ```
+  ```javascript
     void Recursive(int num) {
       if (num <= 0) {   // 재귀의 탈출조건
         return;         // 재귀의 탈출!
