--- a/C/05_C언어의깊은이해.md
+++ b/C/05_C언어의깊은이해.md
@@ -24,7 +24,9 @@
     - 즉, 콘솔 입출력을 위한 스트림은 자동으로 생성이 된다. (ex. printf, scanf 함수)
     - **콘솔 입출력을 위한 '입력 스트림'과 '출력 스트림'은 프로그램이 실행되면 자동으로 생성되고, 종료되면 자동으로 소멸**
     - 즉, 이 둘은 기본적으로 제공되는 '표준 스트림(standard stream)'이다. 그리고 여기엔 '에러 스트림'도 존재한다.
-##### 스트림 종류
+
+표준스트림|-|설명
+-----|------------|----------------
 stdin|표준 입력 스트림|키보드 대상으로 입력
 stdout|표준 출력 스트림|모니터 대상으로 출력
 stderr|표준 에러 스트림|모니터 대상으로 출력
