C Chapter 21 is toooooooooo long

--- a/C/05_문자와문자열.md
+++ b/C/05_문자와문자열.md
@@ -1,4 +1,4 @@
-# 05 C언어의 깊은 이해
+# 05 문자와 문자열
 ## 21. 문자와 문자열 관련 함수
 ### 21.1 스트림과 데이터의 이동
 #### 21.1.1 무엇이 입력이고 무엇이 출력인가?
@@ -201,3 +201,204 @@ stderr|표준 에러 스트림|모니터 대상으로 출력
     ```
     - 입력된 문자열의 길이가 배열의 길이를 넘어서다 보니, fgets 함수는 7보다 하나 작은 6의 길이만큼만 문자열 읽어들임
     - 따라서 프로그램 사용자는 딱 한번 입력하였지만, fgets 함수는 3회 모두 호출되었다.
+    ```c
+      int main(void) {
+        char str[6];
+        int i;
+
+        for (i = 0; i < 3; i++) {
+            fgets(str, sizeof(str), stdin);
+            printf("Read %d: %s \n", i + 1, str);     // printf 함수 안에 개행이 포함되어 있다.
+        }
+        return 0;
+      }
+    ```
+    ```c
+      // 수행 결과
+      We
+      Read 1: We
+
+      like
+      Read 2: like
+
+      you
+      Read 3: you
+
+      Program ended with exit code: 0
+    ```
+    - 그런데 실행 결과를 보면 문장이 출력될 때마다 개행이 두 번 이뤄졌음을 알 수 있다. 왜?
+    - **fgets 함수는 \n을 만날 때 까지 문자열을 읽어 들이는데, \n을 제외시키거나 버리지 않고 문자열의 일부로 받아들임**
+    - 즉, 키보드로 입력한 엔터 키의 정보까지도 문자열의 일부로 저장되는 것이다.
+    ```c
+      Y & I
+      Read 1: Y & I
+
+      ha ha
+      Read 2: ha ha
+
+      ^^ --
+      Read 3: ^^ --
+
+      Program ended with exit code: 0
+    ```
+    - 또한 fgets 함수는 '\n'을 만날 때 까지 문자열을 읽어 들이므로, **공백 문자를 포함하는 문자열의 입력이 가능하다.**
+### 21.4 표준 입출력과 버퍼
+#### 21.4.1 표준 입출력 기반의 버퍼
+- ANSI C의 표준에서 정의된 함수들을 가리켜 '표준 입출력 함수'라 한다. (ex. printf, scanf, fputc, fgetc...)
+- 표준 입출력 함수를 통해서 데이터를 입출력하는 경우, **해당 데이터들은 운영체제가 제공하는 '메모리 버퍼'를 중간에 통과하게 된다.**
+- **메모리 버퍼**: 데이터를 임시로 모아두는(저장하는) 메모리 공간이다.
+- 키보드를 통해 입력되는 데이터는, 일단 입력버퍼에 저장된 다음에(버퍼링 된 다음에) 프로그램에서 읽혀진다.
+- 즉, fgets 함수가 읽어 들이는 문자열은 입력버퍼에 저장된 문자열이다.
+- 키보드로부터 입력된 데이터가 입력 스트림을 거쳐 입력버퍼로 들어가는 시점은 **엔터 키가 눌리는 시점** 이다.
+- 그래서 키보드로 아무리 문자열을 입력해도 엔터 키가 눌리기 전에는 fgets 함수가 문자열을 읽어 들이지 못하는 것이다.
+- 엔터 키가 눌러지기 전에는 입력버퍼가 비워져 있다.
+#### 21.4.2 버퍼링(Buffering)을 하는 이유는 무엇인가?
+- 데이터를 목적지로 바로 전송하지 않고 중간에 출력버퍼와 입력버퍼를 둬서 전송하고자 하는 데이터를 임시 저장하는 이유는?
+- **데이터 전송의 효율성** 과 관련이 있다. 키보드나 모니터와 같은 외부 장치와의 데이터 입출력은 생각보다 시간이 걸리는 작업이다.
+- 따라서 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로 이동시키는 것보다 중간에 메모리 버퍼를 둬서 데이터를 한데 묶어서 이동시키는 것이 보다 효율적이고 빠르다.
+  + ex. 창고에 물건을 나르는 경우 손으로 하나씩 나르는 것보다 손수레에 가득 채워 나르는 것이 빠르다.
+#### 21.4.3 출력버퍼를 비우는 fflush 함수
+- 출력버퍼가 비워진다는 것은 **출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동됨** 을 뜻한다.
+- 그런데, 출력버퍼가 비워지는 시점은 시스템에 따라, 버퍼의 성격에 따라 달라진다.
+  + 버퍼가 꽉 찼을 때 비워지는 버퍼도 있고, 하나의 문장이 완전히 입력되었을 때마다 비워지는 버퍼도 있다.
+- 이처럼 버퍼가 비워지는 시점은 동일하지 않으므로 다음 함수를 알아 둘 필요가 있다.
+```c
+  #include <stdio.h>
+  int fflush(FILE * stream);
+  // 함수호출 성공 시 0, 실패 시 EOF 반환
+```
+- 위 함수는 인자로 전달된 스트림의 버퍼를 비우는 기능을 제공한다.
+- `fflush(stdout);` ==> 표준 출력버퍼를 비워라!
+- fflush 함수는 파일을 대상으로도 호출이 가능하다.
+- 그러나 콘솔 입출력을 하는 상황이거나, Windows나 Linux와 같은 범용 OS를 사용중이라면 stdout을 대상으로 fflush 함수를 호출할 일은 사실상 많지 않다.
+#### 21.4.4 입력버퍼는 어떻게 비워야 하나요?
+- 입력버퍼의 비워짐과 출력버퍼의 비워짐은 개념적으로 차이가 있다.
+- '출력버퍼의 비워짐'이 저장된 데이터가 목적지로 전송됨을 의미하는 반면,
+- '입력버퍼의 비워짐'은 데이터의 소멸을 의미하기 때문이다.
+- `fflush(stdin);` ==> 어떠한 의미로 해석이 될까?
+  + fflush 함수는 출력버퍼를 대상으로 호출하는 함수이다. C언어의 표준에서는 위의 결과에 대해 정의하고 있지 않다.(예측불가능)
+  + 일부 컴파일러는 위의 형태로 함수가 호출되었을 때 입력버퍼를 비워주기도 하지만(ex.Windows 계열의 컴파일러) 그 이외의 컴파일러들은 전혀 다른 결과를 보인다.
+  ```c
+    int main(void) {
+      char perID[7];
+      char name[10];
+
+      fputs("주민번호 앞 6자리 입력: ", stdout);
+      fgets(perID, sizeof(perID), stdin);
+
+      fputs("이름 입력: ", stdout);
+      fgets(name, sizeof(name), stdin);
+
+      printf("주민번호: %s \n", perID);
+      printf("이름: %s \n", name);
+      return 0;
+    }
+  ```
+  ```c
+    // 수행 결과
+    주민번호 앞 6자리 입력: 370410
+    이름 입력: 주민번호: 370410
+    이름:
+
+    Program ended with exit code: 0
+  ```
+  + 이름을 입력할 기회도 얻지 못한 채 프로그램이 종료되어 버리는 현상이 발생한다.
+    - 위의 실행에서 입력한 데이터는 `360410\n` ==> 엔터 키를 포함하여 총 7문자가 입력되었다.
+    - 그런데 fgets 함수로 전달될 때 널 문자를 제외하고 최대 6문자를 읽어 들인다. 따라서 \n을 제외한 나머지 여섯 문자만 읽혀지고 \n은 입력버퍼에 남아있게 된다.
+    - 그리고 그 다음 fgets 함수가 호출되는데 이 함수는 \n을 만날 때까지 읽어들이는 함수이므로, 버퍼에 남아있는 \n만 읽어버리고 만다.
+  + 위와 같은 문제를 해결하기 위해서는 예제 실행 중간에, 입력버퍼에 남아있는 \n 문자 하나만 지워버리면 된다.
+  ```c
+    void ClearLineFromReadBuffer(void) {
+      while(getchar() != '\n');
+    }
+  ```
+  + 입력버퍼에 저장된 문자들은 읽어들이면 지워진다. 그래서 \n을 만날 때까지 문자를 읽어 들이는 함수를 정의하였다.
+  ```c
+    void ClearLineFromReadBuffer(void) {
+      while(getchar() != '\n');
+    }
+
+    int main(void) {
+      char perID[7];
+      char name[10];
+
+      fputs("주민번호 앞 6자리 입력: ", stdout);
+      fgets(perID, sizeof(perID), stdin);
+      ClearLineFromReadBuffer();        // 입력버퍼 비우기
+
+      fputs("이름 입력: ", stdout);
+      fgets(name, sizeof(name), stdin);
+
+      printf("주민번호: %s \n", perID);
+      printf("이름: %s \n", name);
+      return 0;
+    }
+  ```
+  ```c
+    // 수행 결과
+    주민번호 앞 6자리 입력: 360410-2222222
+    이름 입력: ioio
+    주민번호: 360410
+    이름: ioio
+
+    Program ended with exit code: 0
+  ```
+  + 사용자가 잘못 입력하더라도, 필요한 만큼만 읽어들이고 나머지는 지워버리므로 정상적으로 동작한다.
+
+### 21.5 입출력 이외의 문자열 관련 함수
+- 표준 C에서는 문자열과 관련된 다양한 함수들을 정의하고 있다.
+- 헤더파일 string.h에 선언된 문자열 관련 함수들 중 사용 빈도수가 높은 몇몇 함수를 소개
+#### 21.5.1 문자열의 길이를 반환하는 함수: strlen
+- 인자로 전달된 문자열의 길이를 반환하는 함수로 문자열과 관련해서 많이 사용되는 대표적인 함수이다.
+```c
+  #include <stdio.h>
+  size_t strlen(const char * s);
+  // 전달된 문자열의 길이를 반환하되, 널 문자는 길이에 포함되지 않는다.
+```
+- 위 함수의 반환형 `size_t`는 다음과 같이 선언되어 있다.
+  + `typedef unsigned int size_t;` ==> unsigned int의 선언을 size_t로 대신할 수 있다!
+  ```c
+    size_t len;
+    unsigned int len;
+  ```
+  + 위의 두 선언은 완전히 동일하다.
+```c
+  int main(void) {
+    char str[] = "1234567";
+    printf("%u \n", strlen(str));   // 문자열의 길이 7이 출력된다.
+  }
+```
+- 반환형이 size_t이므로 unsigned int형 변수에 저장하고 `%u`서식문자로 출력하는 것이 정확하지만,
+- 문자열의 길이정보는 아무리 길어도 int형 변수에 저장이 가능하고, %d로 출력이 가능하며 이렇게 사용하는 것이 더 흔하다.
+- 예제> fgets 함수호출을 통해 문자열을 입력 받고 싶은데, 같이 딸려오는 \n 문자는 문자열에서 제외하고 싶다!
+  ```c
+    #include <stdio.h>
+    #include <string.h>
+
+    void RemoveBSN(char str[]) {
+      int len = strlen(str);
+      str[len-1] = 0;     // \n이 저장된 위치에 널 문자 저장
+    }
+
+    int main(void) {
+      char str[100];
+      printf("문자열 입력: ");
+      fgets(str, sizeof(str), stdin);
+      printf("길이: %d, 내용: %s \n", strlen(str), str);
+
+      RemoveBSN(str);
+      printf("길이: %d, 내용: %s \n", strlen(str), str);
+      return 0;
+    }
+  ```
+  ```c
+    // 수행 결과
+    문자열 입력: My Pearl
+    길이: 9, 내용: My Pearl
+
+    길이: 8, 내용: My Pearl
+    Program ended with exit code: 0
+  ```
+  + fgets 함수호출을 통해 문자열을 입력받으면 \n문자가 문자열의 일부로 포함된다.
+  + 아스키 코드 값 0은 널 문자를 의미. 이로써 \n은 문자열에서 사라지게 되는 셈이다.
+#### 21.5.2 문자열을 복사하는 함수들: strcpy, strncpy
