--- a/C/05_문자와문자열.md
+++ b/C/05_문자와문자열.md
@@ -402,3 +402,201 @@ stderr|표준 에러 스트림|모니터 대상으로 출력
   + fgets 함수호출을 통해 문자열을 입력받으면 \n문자가 문자열의 일부로 포함된다.
   + 아스키 코드 값 0은 널 문자를 의미. 이로써 \n은 문자열에서 사라지게 되는 셈이다.
 #### 21.5.2 문자열을 복사하는 함수들: strcpy, strncpy
+- 문자열의 복사에 사용되는 함수들
+```c
+  #include <string.h>
+  char * strcpy(char * dest, const char * src);
+  char * strncpy(char * dest, const char * src, size_t n);
+  // 복사된 문자열의 주소 값 반환
+```
+```c
+  int main(void) {
+    char str1[30] = "Simple String";
+    char str2[30];
+    char str3[30];
+    strcpy(str2, str1);   // str1의 문자열을 str2에 복사
+    strncpy(str3, str1, sizeof(str3));
+    ...
+  }
+```
+- 문자열이 복사될 배열의 길이가 문자열의 길이보다 작지 않도록 주의해야 한다.
+- str3에 복사하되, str1의 길이가 매우 길다면, sizeof(str3)이 반환하는 값에 해당하는 문자의 수 만큼만 복사해라
+- 즉, strncpy 함수는 복사될 배열의 길이를 넘어서지 않는 범위 내에서 복사를 진행하고자 할 때 유용하다.
+```c
+  #include <stdio.h>
+  #include <string.h>
+
+  int main(void) {
+    char str1[20] = "1234567890";
+    char str2[20];
+    char str3[5];
+
+    /**** case 1 ****/
+    strcpy(str2, str1);
+    puts(str2);
+
+    /**** case 2 ****/
+    strncpy(str3, str1, sizeof(str3));
+    puts(str3);
+
+    /**** case 3 ****/
+    strncpy(str3, str1, sizeof(str3)-1);
+    str3[sizeof(str3)-1] = 0;
+    puts(str3);
+    return 0;
+  }
+```
+```c
+  1234567890
+  12345@#&@#$234567890
+  1234
+```
+- strncpy 함수는 문자열을 복사할 때 마지막 문자가 널 문자인지 아닌지 상관하지 않고 단순하게 복사한다.
+- 때문에 위 처럼 5개의 문자를 복사하려고 하면 딱 5개의 문자만 복사된다. ==> 문자열을 출력할 때 널 문자가 존재해야 널 문자 이전까지의 문자열을 출력하는데 널 문자가 존재하지 않으니 엉뚱한 영역까지 출력하게 되는 문제가 발생하는 것
+- 그러므로 stncpy 함수를 사용할 때 세 번째 인자로 배열의 실제길이보다 하나 작은 값을 전달해서 널 문자가 삽입될 공간을 남겨두고 복사를 진행한 뒤 배열의 끝에 널 문자를 삽입해주어야 한다.
+#### 21.5.3 문자열을 덧붙이는 함수들: strcat, strncat
+- 이 두 함수는 문자열의 뒤에 다른 문자열을 복사하는 기능을 제공한다.
+```c
+  #include <string.h>
+  char * strcat(char * dest, const char * src);
+  char * strncat(char * dest, const char * src, size_t n);
+  // 덧붙여진 문자열의 주소 값 반환
+```
+```c
+  int main(void) {
+    char str1[30] = "First~";
+    char str2[30] = "Second";
+    strcat(str1, str2);     // str1의 문자열 뒤에 str2를 복사 => "First~Second\0"
+  }
+```
+- 덧붙임이 시작되는 위치는 널 문자 다음이 아닌, **널 문자가 저장된 위치에서부터** 이다.
+- 널 문자가 저장된 위치에서부터 복사가 진행되어야 덧붙임 이후에도 문자열의 끝에 하나의 널 문자만 존재하는 정상적인 문자열이 된다.
+- `strncat(str1, str2, 8);` ==> str2의 문자열 중 **최대** 8개를 str1의 뒤에 덧붙여라!!!!!
+- 즉, str2의 길이가 8을 넘어설 경우 8개의 문자까지만 덧붙이라는 의미인데, 이 8개의 문자에는 널 문자가 포함되지 않는다.
+- 따라서, 널 문자를 포함하여 실제로는 9개의 문자가 str1에 덧붙여진다.
+- **strncpy 함수와 달리 strncat 함수는 문자열의 끝에 널 문자를 자동으로 삽입해준다.**
+```c
+  #include <stdio.h>
+  #include <string.h>
+
+  int main(void) {
+    char str1[20] = "First~";
+    char str2[20] = "Second";
+
+    char str3[20] = "Simple num: ";
+    char str4[20] = "1234567890";
+
+    /**** case 1 ****/
+    strcat(str1, str2);
+    puts(str1);
+
+    /**** case 2 ****/
+    strncat(str3, str4, 7);
+    puts(str3);
+    return 0;
+  }
+```
+```c
+  First~Second
+  Simple num: 1234567
+  Program ended with exit code: 0
+```
+- `strcat` 함수를 사용할 때는 str1에 str2 문자열을 덧붙일 수 있을 만큼 충분한 공간이 있어야 한다.
+- 그렇지 않으면 buffer overflow 에러 발생할 수 있음
+#### 21.5.4 문자열을 비교하는 함수들: strcmp, strncmp
+- 다음 코드가 의미하는 바와 예상되는 출력의 결과 말해보기!
+```c
+  int main(void) {
+    char str1[] = "My String";
+    char str2[] = "My String";
+    if (str1 == str2) {
+      puts("equal");
+    } else {
+      puts("not equal");
+    }
+    return 0;
+  }
+```
+- 위의 코드에서는 str1과 str2를 비교하고 있으나, 문자열의 내용을 비교하는 것이 아니라
+- 배열의 이름은 배열의 주소 값을 의미하므로 **배열 str1과 배열 str2의 주소 값** 을 비교하는 것이다.
+- 따라서, **문자열의 내용을 비교하고자 할 때 다음의 함수를 별도로 호출해야 한다.**
+```c
+  #include <string.h>
+  int strcmp(const char * s1, const char * s2);
+  int strncmp(const char * s1, const char * s2, size_t n);
+  // 두 문자열의 내용이 같으면 0, 같지 않으면 0이 아닌 값 반환
+```
+- 위의 두 함수 모두 인자로 전달된 두 문자열의 내용을 비교하여 다음의 결과를 반환한다.
+- 단, strncmp 함수는 세 번째 인자로 전달된 수의 크기만큼만 문자를 비교한다. 즉, 시작에서 중간부분까지 부분 비교 가능
+  + **s1이 더 크면 0보다 큰 값 반환**
+  + **s2가 더 크면 0보다 작은 값 반환**
+  + **s1과 s2의 내용이 모두 같으면 0반환**
+- 여기서 문자열의 크고 작음은 아스키 코드 값을 기준으로 결정된다.
+  + ex. `printf("%d", strcmp("ABCD", "ABCDE"));` ==> E의 아스키 코드 값이 널 값(0)보다 크므로 음수 반환
+- 일반적으로 strcmp 함수는 **0이 반환되면 동일한 문자열, 0이 아닌 값이 반환되면 동일하지 않은 문자열**
+- 그러므로, 언제 음수가 반환되고, 언제 양수가 반환되는지는 그리 중요하게 인식되지 않는다.
+- **strcmp, strncmp 함수는 사전편찬 순서를 비교한다.**
+```c
+  #include <stdio.h>
+  #include <string.h>
+
+  int main(void) {
+    char str1[20];
+    char str2[20];
+    printf("문자열 입력 1: ");
+    scanf("%s", str1);
+    printf("문자열 입력 2: ");
+    scanf("%s", str2);
+
+    if (!strcmp(str1, str2)) {
+      puts("두 문자열은 완벽히 동일합니다.");
+    } else {
+      puts("두 문자열은 동일하지 않습니다.");
+
+      if (!strncmp(str1, str2, 3)) {
+        puts("그러나 앞 세 글자는 동일합니다.");
+      }
+    }
+    return 0;
+  }
+```
+```c
+  // 실행 결과
+  문자열 입력 1: Simple
+  문자열 입력 2: Simon
+  두 문자열은 동일하지 않습니다.
+  그러나 앞 세 글자는 동일합니다.
+  Program ended with exit code: 0
+```
+#### 21.5.5 그 이외의 변환 함수들
+- 알아두면 도움이 될 함수들 정리. 다음은 헤더파일 <stdlib.h>에 선언된 함수들이다.
+```c
+  int atoi(const char * str);               // 문자열의 내용을 int형으로 변환
+  long atol(const char * str);              // 문자열의 내용을 long형으로 변환
+  double atof(const char * str);            // 문자열의 내용을 double형으로 변환
+```
+- ex. 문자열 "123"을 숫자 123으로 변환하거나, 문자열 "7.15"를 숫자 7.15로 변환해야 하는 경우
+```c
+  #include <stdio.h>
+  #include <stdlib.h>
+
+  int main(void) {
+    char str[20];
+    printf("정수 입력: ");
+    scanf("%s", str);
+    printf("%d \n", atoi(str));
+
+    printf("실수 입력: ");
+    scanf("%s", str);
+    printf("%g \n", atof(str));
+    return 0;
+  }
+```
+```c
+  // 실행 결과 
+  정수 입력: 10
+  10
+  실수 입력: 2.222
+  2.222
+  Program ended with exit code: 0
+```
