--- a/C/02_반복문_분기_함수.md
+++ b/C/02_반복문_분기_함수.md
@@ -1,4 +1,4 @@
-# C언어의 기본2
+# 반복문, 분기, 그리고 함수
 ## 6. printf 함수와 scanf 함수 정리하기
 ### 6.1 특수문자의 출력이 필요한 이유
 - printf 함수 내에서 큰 따옴표의 시작과 끝을 문자열의 시작과 끝으로 인식한다.
