--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -1,2 +1,14 @@
 # 06 구조체와 자료형
 ## 22. 구조체와 사용자 정의 자료형1
+- int가 4바이트, short가 2바이트인 시스템을 기준으로 3바이트짜리 정수 자료형을 만들 수 있을까?
+- NO!!! 만들 수 없다! 기본 자료형을 추가하는 것은 불가능하기 때문이다.
+- 하지만, **기본 자료형 변수를 묶어서 새로운 자료형을 정의하는 것은 가능하다.**
+- 기본 자료형만 가지고는 필요한 유형의 데이터를 모두 표현하는데 한계가 있다.
+### 22.1 구조체란 무엇인가?
+#### 22.1.1 구조체의 정의
+- **구조체(structure)**: 하나 이상의 변수(포인터 변수와 배열 포함)를 묶어서 새로운 자료형을 정의하는 도구이다.
+  + ex. 마우스의 좌표정보를 저장하고 관리해야 한다고 가정하면 다음과 같이 두 개의 변수를 선언해야 한다.
+    - `int xpos;`   // 마우스의 x 좌표
+    - `int ypos;`   // 마우스의 y 좌표
+    - 그런데 이 둘은 서로 독립된 정보를 표현하는 것이 아니라, **마우스의 위치라는 하나의 정보** 를 표현한다.
+     
