--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -11,4 +11,280 @@
     - `int xpos;`   // 마우스의 x 좌표
     - `int ypos;`   // 마우스의 y 좌표
     - 그런데 이 둘은 서로 독립된 정보를 표현하는 것이 아니라, **마우스의 위치라는 하나의 정보** 를 표현한다.
-     
+    - 이 둘은 함께 있을 때 의미를 가지며, 이 중 하나가 빠질 경우 나머지 하나도 의미 없는 변수가 되어버린다.
+    - 이 둘을 묶어놓으면 프로그램상에서의 데이터 표현과 관리가 용이할텐데... ===> '구조체' 등장
+  + 구조체를 정의함으로써 위의 두 변수를 하나로 묶을 수 있다.
+    ```c
+      struct point {    // point라는 이름의 구조체 정의
+        int xpos;       // point 구조체를 구성하는 멤버 xpos
+        int ypos;       // point 구조체를 구성하는 멤버 ypos
+      };
+    ```
+    - 여기서 point가 int나 double같은 자료형의 이름이 되는 것
+    - **사용자 정의 자료형(user defined data type)**: 기본 자료형 변수를 묶어서 새로운 자료형을 만든 것
+  + ex. 사람의 이름과 나이, 전화번호의 정보를 묶을 수 있도록 정의된 구조체
+    ```c
+      struct person {         // person이라는 이름의 구조체 정의
+        char name[20];        // 이름 저장을 위한 멤버
+        char phoneNum[20];    // 전화번호 저장을 위한 멤버  
+        int age;              // 나이 저장을 위한 멤버
+      }
+    ```
+    배열도 값의 저장이 가능한 변수의 성격을 띠기 때문에 구조체의 멤버가 될 수 있다!
+#### 22.1.2 구조체 변수의 선언과 접근
+- 앞에서 정의한 point, person이라는 이름의 구조체들로 변수를 선언할 수 있다. ==> **구조체 변수**
+- `struct type_name val_name;`    // 구조체 변수선언의 기본 형태
+  ```c
+    struct point pos;       // point 구조체의 변수 pos 선언
+    struct person man;      // person 구조체의 변수 man 선언
+  ```
+- 구조체 변수 안에 존재하는 멤버에 접근하기 ==> `구조체 변수의 이름.구조체 멤버의 이름`
+  ```c
+    pos.xpos = 20;              // 구조체 변수 pos의 멤버 xpos에 20을 저장
+    printf("%s \n", man.name);  // man의 멤버 name에 저장된 내용 출력
+  ```
+- 헤더파일 <math.h> 제공 함수 `double sqrt(double x);` ==> 제곱근 x의 값을 반환
+##### 참고) 무엇을 어떻게 함수로 정의할 것인가?
+- 무엇을 함수로 정의할 것이며, 또 그 크기는 어느 정도로 둘 것인가?
+- **하나의 함수는 하나의 기능을 지녀야 한다.**
+
+- **구조체의 멤버로 배열이 선언되면 배열의 접근방식을 취하면 되고, 포인터 변수가 선언되면 포인터 변수의 접근방식을 취하기!**
+  ```c
+    #include <stdio.h>
+    #include <string.h>
+
+    struct person {
+      char name[20];
+      char phoneNum[20];
+      int age;
+    };
+
+    int main(void) {
+      struct person man1, man2;
+      strcpy(man1.name, "안성준");                 // name은 배열이므로 문자열 저장하려면 이렇게 해야함
+      strcpy(man1.phoneNum, "010-1122-3344");    // phoneNum은 배열이므로 문자열 저장하려면 이렇게!
+      man1.age = 23;
+
+      printf("이름 입력: "); scanf("%s", man2.name);
+      printf("번호 입력: "); scanf("%s", man2.phoneNum);
+      printf("나이 입력: "); scanf("%d", &(man2.age));
+
+      printf("이름: %s \n", man1.name);
+      printf("번호: %s \n", man1.phoneNum);
+      printf("나이: %d \n", man1.age);
+
+      printf("이름: %s \n", man2.name);
+      printf("번호: %s \n", man2.phoneNum);
+      printf("나이: %d \n", man2.age);
+      return 0;
+    }
+  ```
+  + 자주 쓰이는 방법은 아니지만 다음과 같이 구조체를 정의하면서 동시에 변수를 선언하는 것도 가능!
+    ```c
+      struct point {          // 구조체의 정의와 변수의 선언
+        int xpos;
+        int ypos;
+      } pos1, pos2, pos3;
+    ```
+    ```c
+      struct point {          // 구조체의 정의
+        int xpos;
+        int ypos;
+      };
+
+      struct point pos1, pos2, pos3;  // 구조체 변수의 선언
+    ```
+#### 22.1.3 구조체 변수의 초기화
+- int형 변수를 선언과 동시에 초기화 할 수 있듯이 구조체 변수도 선언과 동시에 초기화하는 것이 가능
+- 구조체의 초기화 방법은 배열의 초기화와 유사하다.
+  ```c
+    #include <stdio.h>
+
+    struct point {
+      int xpos;
+      int ypos;
+    };
+
+    struct person {
+      char name[20];
+      char phoneNum[20];
+      int age;
+    }
+
+    int main(void) {
+      struct point pos = {10, 20};
+      struct person man = {"이승기", "010-3030-2255", 21};
+      printf("%d %d \n", pos.xpos, pos.ypos);
+      printf("%s %s %d \n", man.name, man.phoneNum, man.age);
+      return 0;
+    }
+  ```
+  + 초기화 과정에서는 문자열 저장을 위해서 strcpy 함수를 호출하지 않아도 된다!
+### 22.2 구조체와 배열 그리고 포인터
+#### 22.2.1 구조체 배열의 선언과 접근
+- 다수의 int형 변수를 선언할 때 int형 배열의 선언을 고려하듯이, 다수의 구조체 변수를 선언할 때는 구조체 배열의 선언을 고려!
+- 구조체 배열의 선언방법은 일반적인 배열의 선언방법과 동일하다.
+  + int형 변수: `int num` ==> int형 배열: `int arr[10]`
+  + point형 변수: `struct point pos` ==> point형 배열: `struct point arr[10]`
+- ex.
+  ```c
+    #include <stdio.h>
+
+    struct point {
+      int xpos;
+      int ypos;
+    };
+
+    int main(void) {
+      struct point arr[3];
+      int i;
+
+      for (i = 0; i < 3; i++) {
+        printf("점의 좌표 입력: ");
+        scanf("%d %d", &arr[i].xpos, &arr[i].ypos);
+      }
+
+      for (i = 0; i < 3; i++) {
+        printf("[%d, %d] ", arr[i].xpos, arr[i].ypos);
+      }
+      printf("\n");
+      return 0;
+    }
+  ```
+#### 22.2.2 구조체 배열의 초기화
+- **구조체 배열을 선언과 동시에 초기화할 때에는 배열의 길이만큼 중괄호를 이용하여 초기화를 진행하면 된다.**
+  ```c
+    struct person arr[3] = {
+      {"이승기", "010-2324-2423", 21},   // 첫 번째 요소의 초기화
+      {"김민호", "010-1313-6754", 17},   // 두 번째 요소의 초기화
+      {"정지영", "010-3724-1144", 35}    // 세 번째 요소의 초기화
+    };
+  ```
+#### 22.2.3 구조체 변수와 포인터
+- 구조체 포인터 변수의 선언 및 연산 방법도 일반적인 포인터 변수의 선언 및 연산의 방법과 다르지 않다.
+  ```javascript
+    int num = 10;           
+    int * iptr = &num;
+
+    struct point pos = {11, 12};
+    struct point * pptr = &pos;   // 포인터 변수 pptr이 구조체 변수 pos를 가리킴
+
+    *iptr = 20;       // 이렇게 포인터 변수 iptr을 이용해서 변수 num에 접근하듯이
+
+    (*pptr).xpos = 10;    // pptr이 가리키는 구조체 변수의 멤버 xpos에 10 저장
+    (*pptr).ypos = 20;    // pptr이 가리키는 구조체 변수의 멤버 ypos에 20 저장
+    pptr->xpos = 10;
+    pptr->ypos = 20;      // 위 두 문장과 동일!!!!
+  ```
+  + 즉, `* 연산과 . 연산을` ===> 하나의 `-> 연산`으로 대체 가능
+  ```javascript
+    #include <stdio.h>
+
+    struct point {
+      int xpos;
+      int ypos;
+    };
+
+    int main(void) {
+      struct point pos1 = {1, 2};
+      struct point pos2 = {100, 200};
+      struct point * pptr = &pos1;
+
+      (*pptr).xpos += 4;
+      (*pptr).ypos += 5;
+      printf("[%d, %d] \n", pptr->xpos, pptr->ypos);
+
+      pptr = &pos2;
+      pptr->xpos += 1;    // pptr이 가리키는 변수의 멤버 xpos의 값을 1 증가
+      pptr->ypos += 2;    // pptr이 가리키는 변수의 멤버 ypos의 값을 2 증가  
+      printf("[%d, %d] \n", (*pptr).xpos, (*pptr).ypos);
+      return 0;
+    }
+  ```
+#### 22.2.4 포인터 변수를 구조체의 멤버로 선언하기
+  ```c
+    #include <stdio.h>
+
+    struct point {
+      int xpos;
+      int ypos;
+    };
+
+    struct circle {
+      double radius;
+      struct point * center;
+    };
+
+    int main(void) {
+      struct point cen = {2, 7};
+      double rad = 5.5;
+
+      struct circle ring = {rad, &cen};   // ring의 멤버 center가 구조체 변수 cen을 가리키게 됨
+      printf("원의 반지름: %g \n", ring.radius);
+      printf("원의 중심: [%d %d] \n", (ring.center)->xpos, (ring.center)->ypos);
+      return 0;
+    }
+  ```
+- 연산자의 우선순위 관계상 `(ring.center)->xpos` 에서 -> 왼편의 소괄호 생략가능! ==> `ring.center->xpos`
+- **TYPE형 구조체 변수의 멤버로 TYPE형 포인터 변수를 둘 수 있다.**
+```c
+  struct point {
+    int xpos;
+    int ypos;
+    struct point * ptr;     // 구조체 point의 포인터 변수 선언
+  }
+```
+  ```c
+    #include <stdio.h>
+
+    struct point {
+      int xpos;
+      int ypos;
+      struct point * ptr;
+    };
+
+    int main(void) {
+      struct point pos1 = {1, 1};
+      struct point pos2 = {2, 2};
+      struct point pos3 = {3, 3};
+
+      pos1.ptr = &pos2;           // pos1과 pos2를 연결
+      pos2.ptr = &pos3;           // pos2와 pos3을 연결
+      pos3.ptr = &pos1;           // pos3을 pos1과 연결
+
+      printf("점의 연결관계... \n");
+      printf("[%d, %d] AND [%d, %d] 연결 \n", pos1.xpos, pos1.ypos, pos1.ptr->xpos, pos1.ptr->ypos);
+      printf("[%d, %d] AND [%d, %d] 연결 \n", pos2.xpos, pos2.ypos, pos2.ptr->xpos, pos2.ptr->ypos);
+      printf("[%d, %d] AND [%d, %d] 연결 \n", pos3.xpos, pos3.ypos, pos3.ptr->xpos, pos3.ptr->ypos);
+
+      return 0;
+    }
+  ```
+#### 22.2.5 구조체 변수의 주소 값과 첫 번째 멤버의 주소 값
+- **구조체 변수의 주소 값은 구조체 변수의 첫 번재 멤버의 주소 값과 동일하다.**
+```c
+  #include <stdio.h>
+
+  struct point {
+    int xpos;
+    int ypos;
+  };
+
+  struct person {
+    char name[20];
+    char phoneNum[20];
+    int age;
+  };
+
+  int main(void) {
+    struct point pos = {10, 20};
+    struct person man = {"이승기", "010-3322-5431", 21};
+
+    printf("%p %p \n", &pos, &pos.xpos);    // 0x7fff5fbff728 0x7fff5fbff728
+    printf("%p %p \n", &man, man.name);     // 0x7fff5fbff738 0x7fff5fbff738
+    return 0;
+  }
+```
+
+## 23. 구조체와 사용자 정의 자료형2
+### 23.1 구조체의 정의와 typedef 선언
