--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -600,3 +600,17 @@
     - 또한 **열거형 상수(enumeration constants)들은 int형으로 표현되는 상수** 이기 때문에 case 레이블에서 상수 대신 1,2,3...을 삽입해도 결과는 동일하다.
 #### 23.5.2 열거형 상수의 값이 결정되는 방식
 - 열거형을 정의하는데 있어서 상수의 값을 명시하지 않으면 열거형 상수의 값은 어떻게 결정이 될까?
+- `enum color {RED, BLUE, WHITE, BLACK};`
+  + 열거형 상수의 이름만 선언되고, 상수의 값이 선언되어 있지 않은 경우 상수의 값은 0에서부터 1씩 증가하는 형태로 결정된다.
+  + 즉, `enum color {RED = 0, BLUE = 1, WHITE = 2, BLACK = 3};`과 동일함
+- `enum color {RED = 3, BLUE, WHITE = 6, BLACK};`
+  + 이런 경우 값이 선언되어 있지 않은 상수는 앞서 선언된 상수보다 1이 증가된 값이 할당된다.
+  + `enum color {RED = 3, BLUE = 4, WHITE = 6, BLACK = 7};`과 동일함
+#### 23.5.3 열거형의 유용함은 이름있는 상수의 정의를 통한 의미의 부여에 있다.
+- 열거형은 구조체 및 공용체와 정의하는 방식이 유사함에도 불구하고 정의하는 목적에서 큰 차이가 있다.
+- 구조체와 공용체는 자료형의 정의에 의미가 있다. 즉, 변수를 선언하기 위해서 자료형을 정의함
+- 열거형도 정의하고 나면 해당 열거형의 변수 선언이 가능하지만 열거형을 정의하는 이유는 'Do, Re, Mi와 같이 연관이 있는 이름을 동시에 상수로 선언할 수 있다'는 것
+  + 만약, Do를 1로 Re를 2로 사용해서 예제를 작성했다면, 그 의미를 파악하기 쉽지 않을 뿐더러 음계와 관련이 있다는 사실도 파악하기 어려웠을 것
+- **열거형의 유용함은 둘 이상의 연관이 있는 이름을 상수로 선언함으로써 프로그램의 가독성을 높이는데 있다.**
+- `enum {Do = 1, Re = 2, Mi = 3, Fa = 4, So = 5, La = 6, Ti = 7};` 이렇게 정의하는 것도 가능
+  + 변수의 선언이 목적이 아닌 상황에서는 위와 같이 정의하기도 한다. 또한 이렇게 정의를 하더라도 Do, Re, Mi ...는 상수로써 의미를 지님
