--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -45,8 +45,8 @@
   ```
 - 헤더파일 <math.h> 제공 함수 `double sqrt(double x);` ==> 제곱근 x의 값을 반환
 ##### 참고) 무엇을 어떻게 함수로 정의할 것인가?
-- 무엇을 함수로 정의할 것이며, 또 그 크기는 어느 정도로 둘 것인가?
-- **하나의 함수는 하나의 기능을 지녀야 한다.**
+###### 무엇을 함수로 정의할 것이며, 또 그 크기는 어느 정도로 둘 것인가?
+###### **하나의 함수는 하나의 기능을 지녀야 한다.**
 
 - **구조체의 멤버로 배열이 선언되면 배열의 접근방식을 취하면 되고, 포인터 변수가 선언되면 포인터 변수의 접근방식을 취하기!**
   ```c
