--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -509,7 +509,7 @@
       ubx.mem3 = 7.15;  // 이 선언으로 인해 저장된 값을 7.15로 덮어써버리게 된다.
       printf("%d \n", ubx.mem1);    // 위에서 실수를 저장하면서 덮어써버렸기 때문에,
       printf("%d \n", ubx.mem2);    // 상위 4바이트를 읽어서 출력하면 알 수 없는 값 출력됨
-      printf("%d \n", ubx.mem3);    // 7.15
+      printf("%g \n", ubx.mem3);    // 7.15
     ```
 - 그렇다면 공용체는 어떠한 경우에 사용이 될까?
 #### 23.4.2 공용체의 유용함은 다양한 접근방식을 제공하는데 있다.
