--- a/C/07_파일입출력.md
+++ b/C/07_파일입출력.md
@@ -1,3 +1,14 @@
 # 07 파일 입출력
 ## 24. 파일 입출력
-### 24.1 
+### 24.1 파일과 스트림(Stream), 그리고 기본적인 파일의 입출력
+- 파일은 운영체제에 의해서 관리가 되므로 운영체제와 파일의 관계를 이해하는 데서부터 시작해야 한다.
+- 프로그램상에서 파일에 저장되어 있는 데이터를 참조하길 원할 때 제일 먼저 해야 할 일은?
+  + 우리가 구현한 프로그램과 참조할 데이터가 저장되어 있는 파일 사이에 데이터가 이동할 수 있는 다리를 놓는 것!
+  + 데이터 이동의 경로가 되는 다리 ==> **스트림(Stream)**, 즉 프로그램과 파일 사이에 스트림을 형성해야 데이터 주고 받기 가능
+#### 24.1.1 fopen 함수호출을 통한 파일과의 스트림 형성과 FILE 구조체
+- 다음은 스트림을 형성할 때 호출하는 함수. 이를 통해 프로그램상에서 파일과의 스트림을 형성할 수 있다.
+```c
+  #include <stdio.h>
+  FILE * fopen(const char * filename, const char * mode);
+  // 성공 시 해당 파일의 FILE 구조체 변수의 주소 값, 실패 시 NULL 포인터 반환
+```
