--- a/C/01_C언어의기본.md
+++ b/C/01_C언어의기본.md
@@ -159,7 +159,7 @@
   + 비트의 이동으로 인해 밀려나는 오른쪽의 비트들은 소멸되고, 이동으로 인해서 생긴 왼쪽의 빈자리는 0으로 채워진다.
   + 그러나 만약 음수라면????? ex. -16의 비트 열을 2칸씩 오른쪽으로 이동시키면 어떻게 될까?
     - 11111111 11111111 11111111 11110000    // -16   
-    - 이 결과는 CPU에 따라서 달라진다. 음의 값을 유지하기 위해서 1을 채우는 CPU도 있고, 0을 채우는 CPU도 있기 때문.
+    - 이 결과는 CPU에 따라서 달라진다. 음의 값을 유지하기 위해서 1을 채우는 CPU도 있고, 0을 채우는 CPU도 있기 때문
       + 00111111 11111111 11111111 11111100     // 0이 채워진 경우
       + 11111111 11111111 11111111 11111100     // 1이 채워진 경우
 
