--- a/C/02_반복문_분기_함수.md
+++ b/C/02_반복문_분기_함수.md
@@ -276,7 +276,7 @@
       printf("I don't know! \n");
   }
 ```
-- `switch(n)`에서의 n은 정수형 변수이어야 하는데 (이 정수형 변수에는 char형도 포함),
+- `switch(n)`에서의 n은 정수형 변수이어야 하는데 (이 정수형 변수에는 char형도 포함)
 - 대표적으로는 int형 변수가 위치하게 된다.
 - **n에 저장된 값에 따라서 실행할 영역이 결정된다.**
 - case문은 위치를 표시하는데 사용되므로 **레이블(label)** 이라 한다.
